--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Отидете на екстрите",
     "CL_SL_CM_visualization": "Визуализация",
     "CL_SL_CM_laundry_usage_report": "Доклад за използване на пране",
-    "CL_SL_CM_usage_month": "Използване на месеца",
     "CL_SL_CM_about_usage_month": "Относно използването на месеца",
     "CL_SL_CM_about_usage_month_detail": "Показаните данни са приблизителни, а не точни измервания. Нашите оценки се основават на контролирани тестове, така че действителните ви резултати може да варират. Реалното потребление на енергия зависи от вашата специфична среда и навици.",
-    "CL_SL_CM_drum_cleaning_title": "Почистване на барабана",
     "CL_SL_CM_drum_cleaning_great_job": "Барабанът на пералнята е чист и си свършил страхотна работа!",
     "CL_SL_CM_drum_cleaning_warning": "Пран е много пъти след последното почистване на барабана и е препоръчително да го използвате, за да направите прането по-чисто.",
     "CL_SL_CM_drum_cleaning_about": "Относно почистването на барабана",
-    "CL_SL_CM_drum_cleaning_about_detail": "Функцията за почистване на барабана на пералната машина е цикъл на самопочистване, предназначен за премахване на мухъл или други бактерии, които е вероятно да са се натрупали в барабана при обща употреба. Препоръчваме ви да извършите почистване на барабана след 30 цикъла на пране.",
     "CL_SL_CM_data_statistics": "Статистика на данните",
     "CL_SL_CM_data_statistics_about": "Относно статистиката на данните",
     "CL_SL_CM_data_statistics_about_detail": "„Други“ е сумата от по-малко използвани.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Библиотека за пране",
     "CL_SL_CM_how_to_wash": "Как да се измие",
     "CL_SL_CM_how_to_care": "Как да се грижим",
-    "CL_SL_CM_how_to_wash_detail": "Научи ви как да перете различни видове дрехи като коприна, вълна, кожа, пухени якета и др.",
-    "CL_SL_CM_how_to_care_detail": "Научи ви как да се грижите за различни видове дрехи като коприна, вълна, кожа, пухени якета и др.",
     "CL_SL_CM_articles": "статии",
     "CL_SL_CM_assistant_title": "Помощник пералня",
     "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Тези програми се основават на вашите ежедневни навици и въпросници.",
     "CL_SL_CM_redo_the_questionnaire": "ПЪРВИ ВЪПРОСНИКА",
     "CL_SL_CM_laundry_title": "Пералня",
-    "CL_SL_CM_laundry_services_title": "Персонализирани перални услуги",
     "CL_SL_CM_laundry_services_detail": "Добре дошли! Отговорете на следните въпроси, за да ни помогнете да препоръчаме по-добри програми за пране, подобрявайки цялостното ви изживяване с прането.",
     "CL_SL_CM_recommended_program_guide": "Препоръчайте програмно ръководство",
     "CL_SL_CM_let's_get_started": "Да започваме!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Вашето устройство е офлайн",
     "CL_CF_AS_waiting": "чакам...",
     "CL_CF_CS_window_air_select_panel": "Изберете изображението, което съответства на контролния панел на вашето устройство.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Изберете зоната за готвене или зоните с мост, които искате да използвате. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Изберете зоната за готвене или зоните с мост, които искате да използвате. ",
+    "CL_CF_HP_Add_Automation": "Добавете автоматизация",
+    "CL_CF_HP_Add_Automation_tip": "Тук можете да добавите най-използваните ръчни процедури",
+    "CL_CF_HP_Add_Home_Status": "Добавяне на домашен статус",
+    "CL_CF_HP_Add_Home_Status_tip": "Тук можете да добавите най-използваните карти на устройството",
+    "CL_CF_HP_Add_Things_To_Do": "Добавете неща за вършене",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Тук можете да добавите най-използваните джаджи",
+    "CL_CF_HP_Add_Discover": "Добавяне на Discover",
+    "CL_CF_HP_Add_Discover_tip": "Тук можете да добавите най-използваните съвети",
+    "CL_CF_HP_no_device_tip": "Свържете вашите устройства",
+    "CL_CF_AS_check_devices": "Проверете състоянието на вашето устройство.",
+    "CL_CF_AS_scan": "СКАНИРАНЕ",
+    "CL_CF_HP_device_skip_tips": "Можете да се върнете към началната страница на старата версия, като намерите настройката на началния раздел в персонализиране на външния вид на страницата с менюто",
+    "CL_CF_HP_reset_card_tips": "Сигурни ли сте, че искате да възстановите първоначалните настройки по подразбиране?",
+    "CL_SL_CM_laundry_services_title": "Персонализирайте вашето пране",
+    "CL_SL_CM_usage_month": "Месечна употреба",
+    "CL_SL_CM_how_to_wash_detail": "Помогнете ви как да перете различни видове дрехи като коприна, вълна, кожа и пухени якета и др.",
+    "CL_SL_CM_how_to_care_detail": "Помогнете ви как да се грижите за различни видове дрехи като коприна, вълна, кожа, пухени якета и др.",
+    "CL_SL_CM_drum_cleaning_about_detail": "Функцията за почистване на барабана на пералната машина е цикъл на самопочистване, предназначен да премахне мухъл или други бактерии, които е вероятно да са се натрупали вътре в барабана при обща употреба.",
+    "CL_SL_CM_drum_clean_wash_cycles": "цикли на пране",
+    "CL_SL_CM_drum_clean_recommended_cycles": "препоръчително почистване на барабана след 45 пранета, можете да го зададете на страницата на устройството",
+    "CL_SL_CM_progam_send_warning2": "За съжаление програмата не може да изпрати, моля, включете устройството си.",
+    "CL_SL_CM_energy_monitor": "ОТИДЕТЕ НА ЕНЕРГИЕН МОНИТОР",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Име като D**CW, като D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
