--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Přejít na extra",
     "CL_SL_CM_visualization": "Vizualizace",
     "CL_SL_CM_laundry_usage_report": "Zpráva o používání prádla",
-    "CL_SL_CM_usage_month": "Využití měsíce",
     "CL_SL_CM_about_usage_month": "O použití měsíce",
     "CL_SL_CM_about_usage_month_detail": "Zobrazené údaje jsou odhady, nikoli přesná měření. Naše odhady jsou založeny na kontrolovaných testech, takže vaše skutečné výsledky se mohou lišit. Skutečná spotřeba energie závisí na vašem konkrétním prostředí a zvycích.",
-    "CL_SL_CM_drum_cleaning_title": "Čištění bubnu",
     "CL_SL_CM_drum_cleaning_great_job": "Buben pračky je čistý a odvedli jste skvělou práci!",
     "CL_SL_CM_drum_cleaning_warning": "Od posledního čištění bubnu byl praný mnohokrát a doporučuje se ho použít k čištění prádla.",
     "CL_SL_CM_drum_cleaning_about": "O čištění bubnu",
-    "CL_SL_CM_drum_cleaning_about_detail": "Funkce čištění bubnu pračky je samočisticí cyklus určený k odstranění plísní nebo jiných bakterií, které se pravděpodobně nahromadily uvnitř bubnu při běžném používání. Doporučujeme provést čištění bubnu po 30 pracích cyklech.",
     "CL_SL_CM_data_statistics": "Statistika dat",
     "CL_SL_CM_data_statistics_about": "O datových statistikách",
     "CL_SL_CM_data_statistics_about_detail": "„Ostatní“ je součet méně používaných.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Knihovna prádla",
     "CL_SL_CM_how_to_wash": "Jak se umýt",
     "CL_SL_CM_how_to_care": "Jak se starat",
-    "CL_SL_CM_how_to_wash_detail": "Naučí vás prát různé druhy oblečení, jako je hedvábí, vlna, kůže a péřové bundy atd.",
-    "CL_SL_CM_how_to_care_detail": "Naučí vás, jak pečovat o různé druhy oblečení, jako je hedvábí, vlna, kůže, péřové bundy atd.",
     "CL_SL_CM_articles": "články",
     "CL_SL_CM_assistant_title": "Pomocník v prádelně",
     "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Tyto programy jsou založeny na vašich každodenních zvycích a dotaznících.",
     "CL_SL_CM_redo_the_questionnaire": "Zopakujte si DOTAZNÍK",
     "CL_SL_CM_laundry_title": "Prádelna",
-    "CL_SL_CM_laundry_services_title": "Personalizované služby prádelny",
     "CL_SL_CM_laundry_services_detail": "Vítejte! Odpovězte na následující otázky, které nám pomohou doporučit lepší programy praní a zlepšit tak váš celkový zážitek z praní.",
     "CL_SL_CM_recommended_program_guide": "Doporučit průvodce programem",
     "CL_SL_CM_let's_get_started": "Začněme!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Vaše zařízení je offline",
     "CL_CF_AS_waiting": "čekání...",
     "CL_CF_CS_window_air_select_panel": "Vyberte obrázek, který odpovídá ovládacímu panelu vaší jednotky.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Vyberte varnou zónu nebo přemostěné zóny, které chcete použít. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Vyberte varnou zónu nebo přemostěné zóny, které chcete použít. ",
+    "CL_CF_HP_Add_Automation": "Přidat automatizaci",
+    "CL_CF_HP_Add_Automation_tip": "Zde můžete přidat nejpoužívanější ruční rutiny",
+    "CL_CF_HP_Add_Home_Status": "Přidat stav domova",
+    "CL_CF_HP_Add_Home_Status_tip": "Zde můžete přidat nejpoužívanější karty zařízení",
+    "CL_CF_HP_Add_Things_To_Do": "Přidat úkoly",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Zde můžete přidat nejpoužívanější widgety",
+    "CL_CF_HP_Add_Discover": "Přidat Discover",
+    "CL_CF_HP_Add_Discover_tip": "Zde můžete přidávat nejpoužívanější tipy",
+    "CL_CF_HP_no_device_tip": "Připojte svá zařízení",
+    "CL_CF_AS_check_devices": "Zkontrolujte stav svého zařízení.",
+    "CL_CF_AS_scan": "SKENOVAT",
+    "CL_CF_HP_device_skip_tips": "Na domovskou stránku staré verze se můžete vrátit tak, že v nastavení vzhledu na stránce nabídky najdete nastavení karty Domů",
+    "CL_CF_HP_reset_card_tips": "Opravdu chcete obnovit výchozí výchozí nastavení?",
+    "CL_SL_CM_laundry_services_title": "Přizpůsobte si prádlo",
+    "CL_SL_CM_usage_month": "Měsíční použití",
+    "CL_SL_CM_how_to_wash_detail": "Pomůže vám prát různé druhy oblečení, jako je hedvábí, vlna, kůže a péřové bundy atd.",
+    "CL_SL_CM_how_to_care_detail": "Pomůže vám, jak pečovat o různé druhy oblečení, jako je hedvábí, vlna, kůže, péřové bundy atd.",
+    "CL_SL_CM_drum_cleaning_about_detail": "Funkce čištění bubnu pračky je samočisticí cyklus určený k odstranění plísní nebo jiných bakterií, které se pravděpodobně nahromadily uvnitř bubnu při běžném používání.",
+    "CL_SL_CM_drum_clean_wash_cycles": "mycích cyklů",
+    "CL_SL_CM_drum_clean_recommended_cycles": "doporučené čištění bubnu po 45 praních, můžete nastavit na stránce zařízení",
+    "CL_SL_CM_progam_send_warning2": "Litujeme, program nelze odeslat, zapněte prosím své zařízení.",
+    "CL_SL_CM_energy_monitor": "PŘEJÍT NA ENERGETICKÝ MONITOR",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Název jako D**CW, jako D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
