--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Zu den Extras",
     "CL_SL_CM_visualization": "Visualisierung",
     "CL_SL_CM_laundry_usage_report": "Wäschenutzungsbericht",
-    "CL_SL_CM_usage_month": "Nutzung des Monats",
     "CL_SL_CM_about_usage_month": "Über die Nutzung des Monats",
     "CL_SL_CM_about_usage_month_detail": "Bei den angezeigten Daten handelt es sich um Schätzungen und nicht um genaue Messungen. Unsere Schätzungen basieren auf kontrollierten Tests, Ihre tatsächlichen Ergebnisse können also abweichen. Der tatsächliche Energieverbrauch hängt von Ihrer spezifischen Umgebung und Ihren Gewohnheiten ab.",
-    "CL_SL_CM_drum_cleaning_title": "Trommelreinigung",
     "CL_SL_CM_drum_cleaning_great_job": "Die Waschtrommel ist sauber und Sie haben tolle Arbeit geleistet!",
     "CL_SL_CM_drum_cleaning_warning": "Da die Trommel seit der letzten Reinigung häufig gewaschen wurde, empfiehlt es sich, sie zum Wäschereinigen zu verwenden.",
     "CL_SL_CM_drum_cleaning_about": "Über die Trommelreinigung",
-    "CL_SL_CM_drum_cleaning_about_detail": "Die Trommelreinigungsfunktion einer Waschmaschine ist ein Selbstreinigungszyklus, der Schimmel oder andere Bakterien entfernt, die sich durch den allgemeinen Gebrauch im Inneren der Trommel angesammelt haben könnten. Wir empfehlen, nach 30 Waschzyklen eine Trommelreinigung durchzuführen.",
     "CL_SL_CM_data_statistics": "Datenstatistik",
     "CL_SL_CM_data_statistics_about": "Informationen zu Datenstatistiken",
     "CL_SL_CM_data_statistics_about_detail": "„Andere“ ist die Summe der weniger genutzten.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Wäscherei-Bibliothek",
     "CL_SL_CM_how_to_wash": "Wie man wäscht",
     "CL_SL_CM_how_to_care": "Pflegehinweise",
-    "CL_SL_CM_how_to_wash_detail": "Bringen Sie Ihnen bei, wie Sie verschiedene Arten von Kleidung wie Seide, Wolle, Leder, Daunenjacken usw. waschen.",
-    "CL_SL_CM_how_to_care_detail": "Bringen Sie Ihnen bei, wie Sie verschiedene Kleidungsarten wie Seide, Wolle, Leder, Daunenjacken usw. pflegen.",
     "CL_SL_CM_articles": "Artikel",
     "CL_SL_CM_assistant_title": "Wäscherei-Assistent",
     "CL_SL_CM_ai_wash_dry": "AI Waschen & Trocknen",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Diese Programme basieren auf Ihren täglichen Gewohnheiten und Fragebögen.",
     "CL_SL_CM_redo_the_questionnaire": "FRAGEBOGEN NEU AUSFÜLLEN",
     "CL_SL_CM_laundry_title": "Wäscherei",
-    "CL_SL_CM_laundry_services_title": "Personalisierter Wäscheservice",
     "CL_SL_CM_laundry_services_detail": "Willkommen! Beantworten Sie die folgenden Fragen, damit wir Ihnen bessere Waschprogramme empfehlen und Ihr Wascherlebnis insgesamt verbessern können.",
     "CL_SL_CM_recommended_program_guide": "Programmführer empfehlen",
     "CL_SL_CM_let's_get_started": "Lasst uns anfangen!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Ihr Gerät ist offline",
     "CL_CF_AS_waiting": "Warten...",
     "CL_CF_CS_window_air_select_panel": "Wählen Sie das Bild aus, das zum Bedienfeld Ihres Geräts passt.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Wählen Sie die Kochzone oder die Brückenzonen aus, die Sie nutzen möchten. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Wählen Sie die Kochzone oder die Brückenzonen aus, die Sie nutzen möchten. ",
+    "CL_CF_HP_Add_Automation": "Automatisierung hinzufügen",
+    "CL_CF_HP_Add_Automation_tip": "Sie können die am häufigsten verwendeten manuellen Routinen hier hinzufügen",
+    "CL_CF_HP_Add_Home_Status": "Home-Status hinzufügen",
+    "CL_CF_HP_Add_Home_Status_tip": "Hier können Sie die am häufigsten verwendeten Gerätekarten hinzufügen",
+    "CL_CF_HP_Add_Things_To_Do": "Dinge hinzufügen, die Sie tun möchten",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Hier können Sie die am häufigsten verwendeten Widgets hinzufügen",
+    "CL_CF_HP_Add_Discover": "Entdecken hinzufügen",
+    "CL_CF_HP_Add_Discover_tip": "Hier können Sie die am häufigsten verwendeten Tipps hinzufügen",
+    "CL_CF_HP_no_device_tip": "Verbinden Sie Ihre Geräte",
+    "CL_CF_AS_check_devices": "Überprüfen Sie den Status Ihres Geräts.",
+    "CL_CF_AS_scan": "SCAN",
+    "CL_CF_HP_device_skip_tips": "Sie können zur Startseite der alten Version zurückkehren, indem Sie auf der Menüseite unter „Darstellung anpassen“ die Einstellungen der Registerkarte „Start“ finden.",
+    "CL_CF_HP_reset_card_tips": "Möchten Sie wirklich die ursprünglichen Standardeinstellungen wiederherstellen?",
+    "CL_SL_CM_laundry_services_title": "Personalisieren Sie Ihre Wäsche",
+    "CL_SL_CM_usage_month": "Monatliche Nutzung",
+    "CL_SL_CM_how_to_wash_detail": "Hilft Ihnen beim Waschen verschiedener Kleidungsarten wie Seide, Wolle, Leder, Daunenjacken usw.",
+    "CL_SL_CM_how_to_care_detail": "Hilft Ihnen bei der Pflege verschiedener Kleidungsarten wie Seide, Wolle, Leder, Daunenjacken usw.",
+    "CL_SL_CM_drum_cleaning_about_detail": "Die Trommelreinigungsfunktion einer Waschmaschine ist ein Selbstreinigungszyklus zum Entfernen von Schimmel oder anderen Bakterien, die sich durch den allgemeinen Gebrauch wahrscheinlich im Inneren der Trommel angesammelt haben.",
+    "CL_SL_CM_drum_clean_wash_cycles": "Waschzyklen",
+    "CL_SL_CM_drum_clean_recommended_cycles": "Empfohlene Trommelreinigung nach 45 Waschvorgängen, Sie können dies auf der Geräteseite einstellen",
+    "CL_SL_CM_progam_send_warning2": "Entschuldigung, das Programm kann nicht senden. Bitte schalten Sie Ihr Gerät ein.",
+    "CL_SL_CM_energy_monitor": "ZUM ENERGIEMONITOR",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Name als D**CW, etwa D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
