--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Go to extra’s",
     "CL_SL_CM_visualization": "Visualization",
     "CL_SL_CM_laundry_usage_report": "Laundry usage report",
-    "CL_SL_CM_usage_month": "Usage of the month",
     "CL_SL_CM_about_usage_month": "About usage of the month",
     "CL_SL_CM_about_usage_month_detail": "The data shown are estimates, not exact measurements.\\nOur estimates are based on controlled tests, so your actual results may vary.\\nReal-world energy use depends on your specific environment and habits.",
-    "CL_SL_CM_drum_cleaning_title": "Drum cleaning",
     "CL_SL_CM_drum_cleaning_great_job": "The washer drum is clean and you did a great job!",
     "CL_SL_CM_drum_cleaning_warning": "It has been washed many times since the last drum cleaning, and it is recommended to use it to make the laundry cleaner.",
     "CL_SL_CM_drum_cleaning_about": "About drum cleaning",
-    "CL_SL_CM_drum_cleaning_about_detail": "A washing machine drum clean function is a self-cleaning cycle designed to remove mold or other bacteria that is likely to have built up inside the drum through general use.We recommend that you do a drum cleaning after 30 laundry cycles.",
     "CL_SL_CM_data_statistics": "Data statistics",
     "CL_SL_CM_data_statistics_about": "About data statistics",
     "CL_SL_CM_data_statistics_about_detail": "“Others” is the sum of lesser-used ones.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Laundry library",
     "CL_SL_CM_how_to_wash": "How to wash",
     "CL_SL_CM_how_to_care": "How to care",
-    "CL_SL_CM_how_to_wash_detail": "Teach you how to Wash different types of clothing such as silk, wool, leather, and down jackets, etc.",
-    "CL_SL_CM_how_to_care_detail": "Teach you how to care for different types of clothing such as silk, wool, leather, and down jackets, etc.",
     "CL_SL_CM_articles": "articles",
     "CL_SL_CM_assistant_title": "Laundry assistant",
     "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "These programs are based on your daily habits and questionnaires.",
     "CL_SL_CM_redo_the_questionnaire": "REDO THE QUESTIONNAIRE",
     "CL_SL_CM_laundry_title": "Laundry",
-    "CL_SL_CM_laundry_services_title": "Personalized laundry services",
     "CL_SL_CM_laundry_services_detail": "Welcome! Answer the following questions to assist us in recommending better laundry programs, enhancing your overall laundry experience.",
     "CL_SL_CM_recommended_program_guide": "Recommend program guide",
     "CL_SL_CM_let's_get_started": "Let's get started!",
@@ -4580,7 +4574,7 @@
     "CL_DV_RF_last_clean_was": "Last cleaning was **",
     "CL_CF_AS_cleaning_and_care_tips": "Cleaning and Care Tips",
     "CL_CF_AS_needs_attention": "The device needs attention.",
-    "CL_CF_AS_run_normal_condition": "Your device runs in normal condition.",
+    "CL_CF_AS_run_normal_condition": "Your devices runs in normal condition.",
     "CL_DV_WM_offline_content1": "Check if your device is plugged in and the power is on.",
     "CL_DV_WM_offline_content2": "Make sure your device is connected to a local wireless network.",
     "CL_DV_WM_offline_content3": "Check your WiFi signal strength. If the signal is low, it might be that the router is too far away from the device.",
@@ -4638,8 +4632,33 @@
     "CL_DV_HOB_program_content_step2": "Select the cooking zone you want to use. ",
     "CL_DV_HOB_program_content_step3": "Confirm with “WIFI” button on selected zone on the induction hob.",
     "CL_DV_HOB_temperature_content_step1": "Select the temperature.",
-    "CL_CF_AS_your_device_offline": "Youre device is offline.",
+    "CL_CF_AS_your_device_offline": "Your devices are offline.",
     "CL_CF_AS_waiting": "waiting...",
     "CL_CF_CS_window_air_select_panel": "Select the image that matches your unit’s control panel.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Select the cooking zone or the bridged zones you want to use. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Select the cooking zone or the bridged zones you want to use. ",
+    "CL_CF_HP_Add_Automation": "Add Automation",
+    "CL_CF_HP_Add_Automation_tip": "You can add the most used manual routines here",
+    "CL_CF_HP_Add_Home_Status": "Add Home Status",
+    "CL_CF_HP_Add_Home_Status_tip": "You can add the most used device cards here",
+    "CL_CF_HP_Add_Things_To_Do": "Add Things To Do",
+    "CL_CF_HP_Add_Things_To_Do_tip": "You can add the most used widgets here",
+    "CL_CF_HP_Add_Discover": "Add Discover",
+    "CL_CF_HP_Add_Discover_tip": "You can add the most used tips here",
+    "CL_CF_HP_no_device_tip": "Connect your devices",
+    "CL_CF_AS_check_devices": "Check the status of your devices.",
+    "CL_CF_AS_scan": "SCAN",
+    "CL_CF_HP_device_skip_tips": "You can back to the old version homepage by find the home tab setting at customize appearance on the menu page",
+    "CL_CF_HP_reset_card_tips": "Are you sure you want to reset to the initial default settings?",
+    "CL_SL_CM_laundry_services_title": "Personalise your laundry",
+    "CL_SL_CM_usage_month": "Monthly usage",
+    "CL_SL_CM_how_to_wash_detail": "Help you how to Wash different types of clothing such as silk, wool, leather, and down jackets, etc.",
+    "CL_SL_CM_how_to_care_detail": "Help you how to care for different types of clothing such as silk, wool, leather, and down jackets, etc.",
+    "CL_SL_CM_drum_cleaning_about_detail": "A washing machine drum clean function is a self-cleaning cycle designed to remove mold or other bacteria that is likely to have built up inside the drum through general use.",
+    "CL_SL_CM_drum_clean_wash_cycles": "wash cycles",
+    "CL_SL_CM_drum_clean_recommended_cycles": "recommended drum clean after 45 washes, you can set it in the device page",
+    "CL_SL_CM_progam_send_warning2": "Sorry, the program can not send, please turn your device on.",
+    "CL_SL_CM_energy_monitor": "GO TO ENERGY MONITOR",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Name as D**CW, like D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "Name as DH-**, like DH-12W, DH-16W",
+    "CL_CF_CS_searching_device_near_you": "Searching for devices near you"
 }
