--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Ir a extras",
     "CL_SL_CM_visualization": "Visualización",
     "CL_SL_CM_laundry_usage_report": "Informe de uso de lavandería",
-    "CL_SL_CM_usage_month": "Uso del mes",
     "CL_SL_CM_about_usage_month": "Sobre el uso del mes",
     "CL_SL_CM_about_usage_month_detail": "Los datos mostrados son estimaciones, no medidas exactas. Nuestras estimaciones se basan en pruebas controladas, por lo que los resultados reales pueden variar. El uso de energía en el mundo real depende de su entorno y hábitos específicos.",
-    "CL_SL_CM_drum_cleaning_title": "Limpieza de tambores",
     "CL_SL_CM_drum_cleaning_great_job": "¡El tambor de la lavadora está limpio y hiciste un gran trabajo!",
     "CL_SL_CM_drum_cleaning_warning": "Se ha lavado muchas veces desde la última limpieza del tambor y se recomienda usarlo para hacer la ropa más limpia.",
     "CL_SL_CM_drum_cleaning_about": "Acerca de la limpieza del tambor",
-    "CL_SL_CM_drum_cleaning_about_detail": "La función de limpieza del tambor de una lavadora es un ciclo de autolimpieza diseñado para eliminar el moho u otras bacterias que probablemente se hayan acumulado dentro del tambor debido al uso general. Le recomendamos que realice una limpieza del tambor después de 30 ciclos de lavado.",
     "CL_SL_CM_data_statistics": "Estadísticas de datos",
     "CL_SL_CM_data_statistics_about": "Acerca de las estadísticas de datos",
     "CL_SL_CM_data_statistics_about_detail": "“Otros” es la suma de los menos utilizados.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Biblioteca de lavandería",
     "CL_SL_CM_how_to_wash": "Cómo lavar",
     "CL_SL_CM_how_to_care": "Cómo cuidar",
-    "CL_SL_CM_how_to_wash_detail": "Te enseñaré cómo lavar diferentes tipos de prendas como seda, lana, cuero, chaquetas de plumas, etc.",
-    "CL_SL_CM_how_to_care_detail": "Te enseñaremos a cuidar diferentes tipos de prendas como seda, lana, cuero, chaquetas de plumas, etc.",
     "CL_SL_CM_articles": "artículos",
     "CL_SL_CM_assistant_title": "Asistente de lavandería",
     "CL_SL_CM_ai_wash_dry": "Lavado y secado con IA",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Estos programas se basan en tus hábitos diarios y cuestionarios.",
     "CL_SL_CM_redo_the_questionnaire": "REHACER EL CUESTIONARIO",
     "CL_SL_CM_laundry_title": "Lavadero",
-    "CL_SL_CM_laundry_services_title": "Servicios de lavandería personalizados",
     "CL_SL_CM_laundry_services_detail": "¡Bienvenido! Responda las siguientes preguntas para ayudarnos a recomendar mejores programas de lavado y mejorar su experiencia de lavado en general.",
     "CL_SL_CM_recommended_program_guide": "Recomendar guía de programas",
     "CL_SL_CM_let's_get_started": "¡Empecemos!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Su dispositivo está fuera de línea",
     "CL_CF_AS_waiting": "espera...",
     "CL_CF_CS_window_air_select_panel": "Seleccione la imagen que coincida con el panel de control de su unidad.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Selecciona la zona de cocción o las zonas puente que deseas utilizar. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Selecciona la zona de cocción o las zonas puente que deseas utilizar. ",
+    "CL_CF_HP_Add_Automation": "Agregar automatización",
+    "CL_CF_HP_Add_Automation_tip": "Puedes agregar aquí las rutinas manuales más utilizadas",
+    "CL_CF_HP_Add_Home_Status": "Añadir estado de inicio",
+    "CL_CF_HP_Add_Home_Status_tip": "Puedes agregar aquí las tarjetas de dispositivos más utilizadas",
+    "CL_CF_HP_Add_Things_To_Do": "Agregar cosas para hacer",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Puedes agregar aquí los widgets más utilizados",
+    "CL_CF_HP_Add_Discover": "Añadir Descubrir",
+    "CL_CF_HP_Add_Discover_tip": "Puedes añadir aquí los consejos más utilizados",
+    "CL_CF_HP_no_device_tip": "Conecta tus dispositivos",
+    "CL_CF_AS_check_devices": "Consulta el estado de tu dispositivo.",
+    "CL_CF_AS_scan": "ESCANEAR",
+    "CL_CF_HP_device_skip_tips": "Puede volver a la página de inicio de la versión anterior buscando la configuración de la pestaña de inicio en Personalizar apariencia en la página del menú.",
+    "CL_CF_HP_reset_card_tips": "¿Está seguro de que desea restablecer la configuración predeterminada inicial?",
+    "CL_SL_CM_laundry_services_title": "Personaliza tu lavandería",
+    "CL_SL_CM_usage_month": "Uso mensual",
+    "CL_SL_CM_how_to_wash_detail": "Le ayudaremos a lavar diferentes tipos de prendas como seda, lana, cuero, chaquetas de plumas, etc.",
+    "CL_SL_CM_how_to_care_detail": "Le ayudaremos a cuidar diferentes tipos de prendas, como seda, lana, cuero, chaquetas de plumas, etc.",
+    "CL_SL_CM_drum_cleaning_about_detail": "La función de limpieza del tambor de una lavadora es un ciclo de autolimpieza diseñado para eliminar el moho u otras bacterias que probablemente se hayan acumulado dentro del tambor debido al uso general.",
+    "CL_SL_CM_drum_clean_wash_cycles": "ciclos de lavado",
+    "CL_SL_CM_drum_clean_recommended_cycles": "Se recomienda limpiar el tambor después de 45 lavados, puedes configurarlo en la página del dispositivo",
+    "CL_SL_CM_progam_send_warning2": "Lo sentimos, el programa no puede enviar, por favor encienda su dispositivo.",
+    "CL_SL_CM_energy_monitor": "IR AL MONITOR DE ENERGÍA",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Nombre como D**CW, como D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
