--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Mene extrain",
     "CL_SL_CM_visualization": "Visualisointi",
     "CL_SL_CM_laundry_usage_report": "Pyykin käyttöraportti",
-    "CL_SL_CM_usage_month": "Kuukauden käyttö",
     "CL_SL_CM_about_usage_month": "Tietoja kuukauden käytöstä",
     "CL_SL_CM_about_usage_month_detail": "Näytetyt tiedot ovat arvioita, eivät tarkkoja mittoja. Arviomme perustuvat kontrolloituihin testeihin, joten todelliset tulokset voivat vaihdella. Tosimaailman energiankäyttö riippuu erityisestä ympäristöstäsi ja tavoistasi.",
-    "CL_SL_CM_drum_cleaning_title": "Rummun puhdistus",
     "CL_SL_CM_drum_cleaning_great_job": "Pesurumpu on puhdas ja teit hienoa työtä!",
     "CL_SL_CM_drum_cleaning_warning": "Se on pesty monta kertaa edellisen rumpupuhdistuksen jälkeen ja on suositeltavaa käyttää sitä pyykin puhdistamiseen.",
     "CL_SL_CM_drum_cleaning_about": "Tietoja rummun puhdistuksesta",
-    "CL_SL_CM_drum_cleaning_about_detail": "Pyykinpesukoneen rummun puhdistustoiminto on itsepuhdistusohjelma, joka on suunniteltu poistamaan hometta tai muita bakteereja, jotka ovat todennäköisesti kertyneet rummun sisälle yleisen käytön aikana. Suosittelemme, että puhdistat rummun 30 pesukerran jälkeen.",
     "CL_SL_CM_data_statistics": "Datatilastot",
     "CL_SL_CM_data_statistics_about": "Tietoja tilastotiedoista",
     "CL_SL_CM_data_statistics_about_detail": "\"Muut\" on vähemmän käytettyjen summa.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Pesulakirjasto",
     "CL_SL_CM_how_to_wash": "Kuinka pestä",
     "CL_SL_CM_how_to_care": "Kuinka huolehtia",
-    "CL_SL_CM_how_to_wash_detail": "Opettele pesemään erilaisia ​​vaatteita, kuten silkkiä, villaa, nahkaa, untuvatakkeja jne.",
-    "CL_SL_CM_how_to_care_detail": "Opettele sinua hoitamaan erilaisia ​​vaatteita, kuten silkkiä, villaa, nahkaa ja untuvatakkeja jne.",
     "CL_SL_CM_articles": "artikkeleita",
     "CL_SL_CM_assistant_title": "Pesula-assistentti",
     "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Nämä ohjelmat perustuvat päivittäisiin tottumuksiin ja kyselyihin.",
     "CL_SL_CM_redo_the_questionnaire": "TEE KYSELYLOMAKE UUDELLEEN",
     "CL_SL_CM_laundry_title": "Pesula",
-    "CL_SL_CM_laundry_services_title": "Henkilökohtaiset pesulapalvelut",
     "CL_SL_CM_laundry_services_detail": "Tervetuloa! Vastaa seuraaviin kysymyksiin auttaaksesi meitä suosittelemaan parempia pesuohjelmia ja parantamaan yleistä pyykinpesukokemustasi.",
     "CL_SL_CM_recommended_program_guide": "Suosittele ohjelmaopasta",
     "CL_SL_CM_let's_get_started": "Aloitetaan!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Laitteesi on offline-tilassa",
     "CL_CF_AS_waiting": "odottaa...",
     "CL_CF_CS_window_air_select_panel": "Valitse kuva, joka vastaa laitteesi ohjauspaneelia.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Valitse haluamasi keittoalue tai siltaalueet. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Valitse haluamasi keittoalue tai siltaalueet. ",
+    "CL_CF_HP_Add_Automation": "Lisää automaatio",
+    "CL_CF_HP_Add_Automation_tip": "Voit lisätä tähän eniten käytetyt manuaaliset rutiinit",
+    "CL_CF_HP_Add_Home_Status": "Lisää kodin tila",
+    "CL_CF_HP_Add_Home_Status_tip": "Voit lisätä tähän eniten käytetyt laitekortit",
+    "CL_CF_HP_Add_Things_To_Do": "Lisää tekemistä",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Voit lisätä tähän eniten käytetyt widgetit",
+    "CL_CF_HP_Add_Discover": "Lisää Discover",
+    "CL_CF_HP_Add_Discover_tip": "Voit lisätä tähän eniten käytetyt vinkit",
+    "CL_CF_HP_no_device_tip": "Yhdistä laitteesi",
+    "CL_CF_AS_check_devices": "Tarkista laitteesi tila.",
+    "CL_CF_AS_scan": "SKANNATA",
+    "CL_CF_HP_device_skip_tips": "Voit palata vanhan version etusivulle etsimällä Koti-välilehden asetukset kohdasta Mukauta ulkoasua valikkosivulla",
+    "CL_CF_HP_reset_card_tips": "Haluatko varmasti palauttaa alkuperäiset oletusasetukset?",
+    "CL_SL_CM_laundry_services_title": "Mukauta pyykkiäsi",
+    "CL_SL_CM_usage_month": "Kuukausittainen käyttö",
+    "CL_SL_CM_how_to_wash_detail": "Auttaa pesemään erilaisia ​​vaatteita, kuten silkkiä, villaa, nahkaa ja untuvatakkeja jne.",
+    "CL_SL_CM_how_to_care_detail": "Auttaa sinua hoitamaan erilaisia ​​vaatteita, kuten silkkiä, villaa, nahkaa ja untuvatakkeja jne.",
+    "CL_SL_CM_drum_cleaning_about_detail": "Pyykinpesukoneen rummun puhdistustoiminto on itsepuhdistusohjelma, joka on suunniteltu poistamaan hometta tai muita bakteereja, jotka ovat todennäköisesti kertyneet rummun sisälle yleisessä käytössä.",
+    "CL_SL_CM_drum_clean_wash_cycles": "pesujaksot",
+    "CL_SL_CM_drum_clean_recommended_cycles": "suositeltu rummun puhdistus 45 pesun jälkeen, voit asettaa sen laitesivulla",
+    "CL_SL_CM_progam_send_warning2": "Valitettavasti ohjelma ei voi lähettää, kytke laitteesi päälle.",
+    "CL_SL_CM_energy_monitor": "SIIRRY ENERGY MONITOR -OHJELMAAN",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Nimeä D**CW, kuten D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
