--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Accéder aux extras",
     "CL_SL_CM_visualization": "Visualisation",
     "CL_SL_CM_laundry_usage_report": "Rapport d'utilisation de la lessive",
-    "CL_SL_CM_usage_month": "Utilisation du mois",
     "CL_SL_CM_about_usage_month": "À propos de l'utilisation du mois",
     "CL_SL_CM_about_usage_month_detail": "Les données affichées sont des estimations et non des mesures exactes. Nos estimations sont basées sur des tests contrôlés, de sorte que vos résultats réels peuvent varier. La consommation d'énergie réelle dépend de votre environnement et de vos habitudes spécifiques.",
-    "CL_SL_CM_drum_cleaning_title": "Nettoyage du tambour",
     "CL_SL_CM_drum_cleaning_great_job": "Le tambour de la laveuse est propre et vous avez fait un excellent travail !",
     "CL_SL_CM_drum_cleaning_warning": "Il a été lavé plusieurs fois depuis le dernier nettoyage du tambour et il est recommandé de l'utiliser pour rendre le linge plus propre.",
     "CL_SL_CM_drum_cleaning_about": "À propos du nettoyage du tambour",
-    "CL_SL_CM_drum_cleaning_about_detail": "La fonction de nettoyage du tambour d'une machine à laver est un cycle d'autonettoyage conçu pour éliminer les moisissures ou autres bactéries susceptibles de s'être accumulées à l'intérieur du tambour lors d'une utilisation générale. Nous vous recommandons d'effectuer un nettoyage du tambour après 30 cycles de lessive.",
     "CL_SL_CM_data_statistics": "Statistiques des données",
     "CL_SL_CM_data_statistics_about": "À propos des statistiques de données",
     "CL_SL_CM_data_statistics_about_detail": "« Autres » est la somme des termes moins utilisés.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Bibliothèque de blanchisserie",
     "CL_SL_CM_how_to_wash": "Comment se laver",
     "CL_SL_CM_how_to_care": "Comment prendre soin",
-    "CL_SL_CM_how_to_wash_detail": "Je vous apprends à laver différents types de vêtements tels que la soie, la laine, le cuir, les doudounes, etc.",
-    "CL_SL_CM_how_to_care_detail": "Je vous apprends à prendre soin de différents types de vêtements tels que la soie, la laine, le cuir, les doudounes, etc.",
     "CL_SL_CM_articles": "articles",
     "CL_SL_CM_assistant_title": "Assistante de blanchisserie",
     "CL_SL_CM_ai_wash_dry": "Lavage et séchage par IA",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Ces programmes sont basés sur vos habitudes quotidiennes et sur des questionnaires.",
     "CL_SL_CM_redo_the_questionnaire": "REFAIRE LE QUESTIONNAIRE",
     "CL_SL_CM_laundry_title": "Lessive",
-    "CL_SL_CM_laundry_services_title": "Services de blanchisserie personnalisés",
     "CL_SL_CM_laundry_services_detail": "Bienvenue ! Répondez aux questions suivantes pour nous aider à vous recommander de meilleurs programmes de lessive et à améliorer votre expérience globale de lessive.",
     "CL_SL_CM_recommended_program_guide": "Guide du programme recommandé",
     "CL_SL_CM_let's_get_started": "C'est parti !",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Votre appareil est hors ligne",
     "CL_CF_AS_waiting": "en attendant...",
     "CL_CF_CS_window_air_select_panel": "Sélectionnez l’image qui correspond au panneau de commande de votre appareil.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Sélectionnez la zone de cuisson ou les zones pontées que vous souhaitez utiliser. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Sélectionnez la zone de cuisson ou les zones pontées que vous souhaitez utiliser. ",
+    "CL_CF_HP_Add_Automation": "Ajouter une automatisation",
+    "CL_CF_HP_Add_Automation_tip": "Vous pouvez ajouter ici les routines manuelles les plus utilisées",
+    "CL_CF_HP_Add_Home_Status": "Ajouter le statut de la maison",
+    "CL_CF_HP_Add_Home_Status_tip": "Vous pouvez ajouter ici les cartes d'appareils les plus utilisées",
+    "CL_CF_HP_Add_Things_To_Do": "Ajouter des choses à faire",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Vous pouvez ajouter ici les widgets les plus utilisés",
+    "CL_CF_HP_Add_Discover": "Ajouter Découvrir",
+    "CL_CF_HP_Add_Discover_tip": "Vous pouvez ajouter ici les astuces les plus utilisées",
+    "CL_CF_HP_no_device_tip": "Connectez vos appareils",
+    "CL_CF_AS_check_devices": "Vérifiez l'état de votre appareil.",
+    "CL_CF_AS_scan": "BALAYAGE",
+    "CL_CF_HP_device_skip_tips": "Vous pouvez revenir à l'ancienne page d'accueil en recherchant le paramètre de l'onglet d'accueil dans Personnaliser l'apparence sur la page de menu",
+    "CL_CF_HP_reset_card_tips": "Êtes-vous sûr de vouloir réinitialiser les paramètres par défaut initiaux ?",
+    "CL_SL_CM_laundry_services_title": "Personnalisez votre linge",
+    "CL_SL_CM_usage_month": "Utilisation mensuelle",
+    "CL_SL_CM_how_to_wash_detail": "Je vous aide à laver différents types de vêtements tels que la soie, la laine, le cuir, les doudounes, etc.",
+    "CL_SL_CM_how_to_care_detail": "Vous aide à prendre soin de différents types de vêtements tels que la soie, la laine, le cuir, les doudounes, etc.",
+    "CL_SL_CM_drum_cleaning_about_detail": "La fonction de nettoyage du tambour d'une machine à laver est un cycle d'autonettoyage conçu pour éliminer les moisissures ou autres bactéries susceptibles de s'être accumulées à l'intérieur du tambour lors d'une utilisation générale.",
+    "CL_SL_CM_drum_clean_wash_cycles": "cycles de lavage",
+    "CL_SL_CM_drum_clean_recommended_cycles": "nettoyage du tambour recommandé après 45 lavages, vous pouvez le définir dans la page de l'appareil",
+    "CL_SL_CM_progam_send_warning2": "Désolé, le programme ne peut pas envoyer, veuillez allumer votre appareil.",
+    "CL_SL_CM_energy_monitor": "ACCÉDER AU MONITEUR D'ÉNERGIE",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Nom comme D**CW, comme D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
