--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "לך לתוספות",
     "CL_SL_CM_visualization": "רְאִיָה",
     "CL_SL_CM_laundry_usage_report": "דוח שימוש בכביסה",
-    "CL_SL_CM_usage_month": "שימוש החודש",
     "CL_SL_CM_about_usage_month": "לגבי השימוש בחודש",
     "CL_SL_CM_about_usage_month_detail": "הנתונים המוצגים הם הערכות, לא מדידות מדויקות. ההערכות שלנו מבוססות על בדיקות מבוקרות, כך שהתוצאות בפועל עשויות להשתנות. השימוש באנרגיה בעולם האמיתי תלוי בסביבה ובהרגלים הספציפיים שלך.",
-    "CL_SL_CM_drum_cleaning_title": "ניקוי תופים",
     "CL_SL_CM_drum_cleaning_great_job": "תוף הכביסה נקי ועשית עבודה נהדרת!",
     "CL_SL_CM_drum_cleaning_warning": "הוא נשטף פעמים רבות מאז ניקוי התוף האחרון, ומומלץ לעשות בו את הכביסה נקייה יותר.",
     "CL_SL_CM_drum_cleaning_about": "לגבי ניקוי תופים",
-    "CL_SL_CM_drum_cleaning_about_detail": "פונקציית ניקוי תוף במכונת כביסה היא מחזור ניקוי עצמי שנועד להסיר עובש או חיידקים אחרים שסביר שהצטברו בתוך התוף באמצעות שימוש כללי. אנו ממליצים לבצע ניקוי תוף לאחר 30 מחזורי כביסה.",
     "CL_SL_CM_data_statistics": "נתונים סטטיסטיים",
     "CL_SL_CM_data_statistics_about": "לגבי נתונים סטטיסטיים",
     "CL_SL_CM_data_statistics_about_detail": "\"אחרים\" הוא סכום הפחות בשימוש.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "ספריית כביסה",
     "CL_SL_CM_how_to_wash": "איך לשטוף",
     "CL_SL_CM_how_to_care": "איך לטפל",
-    "CL_SL_CM_how_to_wash_detail": "ללמד אותך כיצד לכבס סוגים שונים של בגדים כגון משי, צמר, עור ומעילי פוך וכו'.",
-    "CL_SL_CM_how_to_care_detail": "ללמד אותך כיצד לטפל בסוגים שונים של בגדים כגון משי, צמר, עור, מעילי פוך וכו'.",
     "CL_SL_CM_articles": "מאמרים",
     "CL_SL_CM_assistant_title": "עוזר כביסה",
     "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "תוכניות אלו מבוססות על ההרגלים והשאלונים היומיומיים שלך.",
     "CL_SL_CM_redo_the_questionnaire": "בצע מחדש את השאלון",
     "CL_SL_CM_laundry_title": "כְּבִיסָה",
-    "CL_SL_CM_laundry_services_title": "שירותי כביסה בהתאמה אישית",
     "CL_SL_CM_laundry_services_detail": "קַבָּלַת פָּנִים! ענה על השאלות הבאות כדי לסייע לנו להמליץ ​​על תוכניות כביסה טובות יותר, ולשפר את חווית הכביסה הכוללת שלך.",
     "CL_SL_CM_recommended_program_guide": "ממליץ על מדריך תוכנית",
     "CL_SL_CM_let's_get_started": "בואו נתחיל!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "המכשיר שלך במצב לא מקוון",
     "CL_CF_AS_waiting": "הַמתָנָה...",
     "CL_CF_CS_window_air_select_panel": "בחר את התמונה המתאימה ללוח הבקרה של היחידה שלך.",
-    "CL_DV_HOB_program_zone_bridge_step2": "בחר את אזור הבישול או את האזורים המגושרים שבהם ברצונך להשתמש. "
+    "CL_DV_HOB_program_zone_bridge_step2": "בחר את אזור הבישול או את האזורים המגושרים שבהם ברצונך להשתמש. ",
+    "CL_CF_HP_Add_Automation": "הוסף אוטומציה",
+    "CL_CF_HP_Add_Automation_tip": "אתה יכול להוסיף את השגרות הידניות הנפוצות ביותר כאן",
+    "CL_CF_HP_Add_Home_Status": "הוסף סטטוס בית",
+    "CL_CF_HP_Add_Home_Status_tip": "אתה יכול להוסיף את כרטיסי המכשירים הנפוצים ביותר כאן",
+    "CL_CF_HP_Add_Things_To_Do": "הוסף דברים לעשות",
+    "CL_CF_HP_Add_Things_To_Do_tip": "אתה יכול להוסיף את הווידג'טים הנפוצים ביותר כאן",
+    "CL_CF_HP_Add_Discover": "הוסף את Discover",
+    "CL_CF_HP_Add_Discover_tip": "אתה יכול להוסיף את הטיפים הנפוצים ביותר כאן",
+    "CL_CF_HP_no_device_tip": "חבר את המכשירים שלך",
+    "CL_CF_AS_check_devices": "בדוק את מצב המכשיר שלך.",
+    "CL_CF_AS_scan": "לִסְרוֹק",
+    "CL_CF_HP_device_skip_tips": "אתה יכול לחזור לדף הבית של הגרסה הישנה על ידי חיפוש הגדרת לשונית הבית בהתאמה אישית של המראה בדף התפריט",
+    "CL_CF_HP_reset_card_tips": "האם אתה בטוח שברצונך לאפס להגדרות ברירת המחדל הראשוניות?",
+    "CL_SL_CM_laundry_services_title": "התאם אישית את הכביסה שלך",
+    "CL_SL_CM_usage_month": "שימוש חודשי",
+    "CL_SL_CM_how_to_wash_detail": "לעזור לך כיצד לכבס סוגי בגדים שונים כגון משי, צמר, עור ומעילי פוך וכו'.",
+    "CL_SL_CM_how_to_care_detail": "לעזור לך כיצד לטפל בסוגים שונים של בגדים כגון משי, צמר, עור, מעילי פוך וכו'.",
+    "CL_SL_CM_drum_cleaning_about_detail": "פונקציית ניקוי תוף במכונת כביסה היא מחזור ניקוי עצמי שנועד להסיר עובש או חיידקים אחרים שסביר שהצטברו בתוך התוף באמצעות שימוש כללי.",
+    "CL_SL_CM_drum_clean_wash_cycles": "מחזורי כביסה",
+    "CL_SL_CM_drum_clean_recommended_cycles": "מומלץ לנקות תוף לאחר 45 כביסות, ניתן להגדיר זאת בדף המכשיר",
+    "CL_SL_CM_progam_send_warning2": "מצטערים, התוכנית לא יכולה לשלוח, אנא הפעל את המכשיר שלך.",
+    "CL_SL_CM_energy_monitor": "עבור ל- ENERGY MONITOR",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "שם בתור D**CW, כמו D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
