--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Menj az extrákhoz",
     "CL_SL_CM_visualization": "Megjelenítés",
     "CL_SL_CM_laundry_usage_report": "Mosodahasználati jelentés",
-    "CL_SL_CM_usage_month": "A hónap felhasználása",
     "CL_SL_CM_about_usage_month": "A hónap használatáról",
     "CL_SL_CM_about_usage_month_detail": "A megjelenített adatok becslések, nem pontos mérések. Becsléseink ellenőrzött teszteken alapulnak, így a tényleges eredmények változhatnak. A valós energiafelhasználás az Ön konkrét környezetétől és szokásaitól függ.",
-    "CL_SL_CM_drum_cleaning_title": "Dobtisztítás",
     "CL_SL_CM_drum_cleaning_great_job": "A mosódob tiszta és remek munkát végzett!",
     "CL_SL_CM_drum_cleaning_warning": "A legutóbbi dobtisztítás óta sokszor ki lett mosva, a ruhanemű tisztábbá tételéhez ajánlott használni.",
     "CL_SL_CM_drum_cleaning_about": "A dobtisztításról",
-    "CL_SL_CM_drum_cleaning_about_detail": "A mosógép dobtisztító funkciója egy öntisztító ciklus, amelynek célja a penész vagy más baktériumok eltávolítása, amelyek az általános használat során valószínűleg felhalmozódtak a dob belsejében. Javasoljuk, hogy 30 mosási ciklus után végezzen dobtisztítást.",
     "CL_SL_CM_data_statistics": "Adatstatisztika",
     "CL_SL_CM_data_statistics_about": "Az adatstatisztikáról",
     "CL_SL_CM_data_statistics_about_detail": "Az „egyéb” a kevésbé használtak összege.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Mosodai könyvtár",
     "CL_SL_CM_how_to_wash": "Hogyan kell mosni",
     "CL_SL_CM_how_to_care": "Hogyan kell törődni",
-    "CL_SL_CM_how_to_wash_detail": "Megtaníthatja, hogyan kell mosni különböző típusú ruhákat, például selyem, gyapjú, bőr, kabát stb.",
-    "CL_SL_CM_how_to_care_detail": "Megtaníthatja, hogyan kell ápolni a különböző típusú ruhákat, például selyem, gyapjú, bőr, kabát stb.",
     "CL_SL_CM_articles": "cikkeket",
     "CL_SL_CM_assistant_title": "Mosodai asszisztens",
     "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Ezek a programok az Ön napi szokásaira és kérdőíveire épülnek.",
     "CL_SL_CM_redo_the_questionnaire": "ÚJRA A KÉRDŐÍV",
     "CL_SL_CM_laundry_title": "Mosoda",
-    "CL_SL_CM_laundry_services_title": "Személyre szabott mosodai szolgáltatások",
     "CL_SL_CM_laundry_services_detail": "Üdvözöljük! Válaszoljon a következő kérdésekre, hogy segítsen nekünk jobb mosási programokat ajánlani, és javítani az általános mosási élményt.",
     "CL_SL_CM_recommended_program_guide": "Programkalauz ajánlása",
     "CL_SL_CM_let's_get_started": "Kezdjük is!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Eszköze offline állapotban van",
     "CL_CF_AS_waiting": "várakozás...",
     "CL_CF_CS_window_air_select_panel": "Válassza ki azt a képet, amelyik illik az egység vezérlőpultjához.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Válassza ki a használni kívánt főzőzónát vagy áthidalt zónákat. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Válassza ki a használni kívánt főzőzónát vagy áthidalt zónákat. ",
+    "CL_CF_HP_Add_Automation": "Automatizálás hozzáadása",
+    "CL_CF_HP_Add_Automation_tip": "Itt adhatja hozzá a leggyakrabban használt manuális rutinokat",
+    "CL_CF_HP_Add_Home_Status": "Otthoni állapot hozzáadása",
+    "CL_CF_HP_Add_Home_Status_tip": "Itt adhatja hozzá a leggyakrabban használt eszközkártyákat",
+    "CL_CF_HP_Add_Things_To_Do": "Teendők hozzáadása",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Itt adhatja hozzá a leggyakrabban használt widgeteket",
+    "CL_CF_HP_Add_Discover": "Felfedezés hozzáadása",
+    "CL_CF_HP_Add_Discover_tip": "Itt adhatja hozzá a leggyakrabban használt tippeket",
+    "CL_CF_HP_no_device_tip": "Csatlakoztassa eszközeit",
+    "CL_CF_AS_check_devices": "Ellenőrizze a készülék állapotát.",
+    "CL_CF_AS_scan": "LETAPOGATÁS",
+    "CL_CF_HP_device_skip_tips": "A régi verzió kezdőlapjára úgy térhet vissza, hogy a menüoldalon a megjelenés testreszabásánál megtalálja a Kezdőlap fül beállítását",
+    "CL_CF_HP_reset_card_tips": "Biztosan vissza szeretné állítani a kezdeti alapértelmezett beállításokat?",
+    "CL_SL_CM_laundry_services_title": "Tedd személyre a mosodat",
+    "CL_SL_CM_usage_month": "Havi használat",
+    "CL_SL_CM_how_to_wash_detail": "Segít a különböző típusú ruhák mosásában, például selyem, gyapjú, bőr, kabát stb.",
+    "CL_SL_CM_how_to_care_detail": "Segít a különböző típusú ruhák, például selyem, gyapjú, bőr és tollkabát ápolásában.",
+    "CL_SL_CM_drum_cleaning_about_detail": "A mosógép dobtisztító funkciója egy öntisztító ciklus, amelyet arra terveztek, hogy eltávolítsa a penészgombát vagy más baktériumokat, amelyek az általános használat során valószínűleg felhalmozódtak a dob belsejében.",
+    "CL_SL_CM_drum_clean_wash_cycles": "mosási ciklusok",
+    "CL_SL_CM_drum_clean_recommended_cycles": "ajánlott dobtisztítás 45 mosás után, ezt a készülék oldalán tudod beállítani",
+    "CL_SL_CM_progam_send_warning2": "Sajnáljuk, a program nem tud küldeni, kérjük, kapcsolja be a készüléket.",
+    "CL_SL_CM_energy_monitor": "LÉPJ AZ ENERGY MONITOR OLDALÁRA",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Nevezze meg D**CW, például D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
