--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Pergi ke tambahan",
     "CL_SL_CM_visualization": "Visualisasi",
     "CL_SL_CM_laundry_usage_report": "Laporan penggunaan binatu",
-    "CL_SL_CM_usage_month": "Penggunaan bulan",
     "CL_SL_CM_about_usage_month": "Tentang penggunaan bulan",
     "CL_SL_CM_about_usage_month_detail": "Data yang ditampilkan merupakan estimasi, bukan pengukuran yang tepat. Estimasi kami didasarkan pada pengujian yang terkontrol, sehingga hasil aktual Anda mungkin berbeda. Penggunaan energi di dunia nyata bergantung pada lingkungan dan kebiasaan spesifik Anda.",
-    "CL_SL_CM_drum_cleaning_title": "Pembersihan drum",
     "CL_SL_CM_drum_cleaning_great_job": "Tabung pencuci bersih dan Anda melakukan pekerjaan dengan baik!",
     "CL_SL_CM_drum_cleaning_warning": "Telah dicuci berkali-kali sejak pembersihan drum terakhir, dan disarankan untuk menggunakannya untuk membuat cucian lebih bersih.",
     "CL_SL_CM_drum_cleaning_about": "Tentang pembersihan drum",
-    "CL_SL_CM_drum_cleaning_about_detail": "Fungsi pembersihan tabung mesin cuci adalah siklus pembersihan otomatis yang dirancang untuk menghilangkan jamur atau bakteri lain yang mungkin menumpuk di dalam tabung karena penggunaan umum. Kami menyarankan agar Anda melakukan pembersihan tabung setelah 30 siklus pencucian.",
     "CL_SL_CM_data_statistics": "Statistik data",
     "CL_SL_CM_data_statistics_about": "Tentang statistik data",
     "CL_SL_CM_data_statistics_about_detail": "“Lainnya” adalah jumlah dari yang jarang digunakan.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Perpustakaan binatu",
     "CL_SL_CM_how_to_wash": "Cara mencuci",
     "CL_SL_CM_how_to_care": "Cara merawat",
-    "CL_SL_CM_how_to_wash_detail": "Mengajarkan Anda cara mencuci berbagai jenis pakaian seperti sutra, wol, kulit, dan jaket bulu angsa, dll.",
-    "CL_SL_CM_how_to_care_detail": "Mengajarkan Anda cara merawat berbagai jenis pakaian seperti sutra, wol, kulit, jaket bulu angsa, dll.",
     "CL_SL_CM_articles": "Artikel",
     "CL_SL_CM_assistant_title": "Asisten binatu",
     "CL_SL_CM_ai_wash_dry": "Cuci & Keringkan dengan AI",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Program ini didasarkan pada kebiasaan harian dan kuesioner Anda.",
     "CL_SL_CM_redo_the_questionnaire": "ULANGI KUESIONER",
     "CL_SL_CM_laundry_title": "Cucian",
-    "CL_SL_CM_laundry_services_title": "Layanan binatu pribadi",
     "CL_SL_CM_laundry_services_detail": "Selamat datang! Jawab pertanyaan berikut untuk membantu kami merekomendasikan program binatu yang lebih baik, sehingga meningkatkan pengalaman binatu Anda secara keseluruhan.",
     "CL_SL_CM_recommended_program_guide": "Rekomendasikan panduan program",
     "CL_SL_CM_let's_get_started": "Mari kita mulai!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Perangkat Anda sedang offline",
     "CL_CF_AS_waiting": "menunggu...",
     "CL_CF_CS_window_air_select_panel": "Pilih gambar yang sesuai dengan panel kontrol unit Anda.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Pilih zona memasak atau zona jembatan yang ingin Anda gunakan. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Pilih zona memasak atau zona jembatan yang ingin Anda gunakan. ",
+    "CL_CF_HP_Add_Automation": "Tambahkan Otomatisasi",
+    "CL_CF_HP_Add_Automation_tip": "Anda dapat menambahkan rutinitas manual yang paling sering digunakan di sini",
+    "CL_CF_HP_Add_Home_Status": "Tambahkan Status Rumah",
+    "CL_CF_HP_Add_Home_Status_tip": "Anda dapat menambahkan kartu perangkat yang paling sering digunakan di sini",
+    "CL_CF_HP_Add_Things_To_Do": "Tambahkan Hal yang Harus Dilakukan",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Anda dapat menambahkan widget yang paling sering digunakan di sini",
+    "CL_CF_HP_Add_Discover": "Tambahkan Temukan",
+    "CL_CF_HP_Add_Discover_tip": "Anda dapat menambahkan tips yang paling sering digunakan di sini",
+    "CL_CF_HP_no_device_tip": "Hubungkan perangkat Anda",
+    "CL_CF_AS_check_devices": "Periksa status perangkat Anda.",
+    "CL_CF_AS_scan": "PEMINDAIAN",
+    "CL_CF_HP_device_skip_tips": "Anda dapat kembali ke beranda versi lama dengan menemukan pengaturan tab beranda di kustomisasi tampilan di halaman menu",
+    "CL_CF_HP_reset_card_tips": "Apakah Anda yakin ingin mengatur ulang ke pengaturan awal default?",
+    "CL_SL_CM_laundry_services_title": "Personalisasi cucian Anda",
+    "CL_SL_CM_usage_month": "Penggunaan bulanan",
+    "CL_SL_CM_how_to_wash_detail": "Membantu Anda cara mencuci berbagai jenis pakaian seperti sutra, wol, kulit, dan jaket bulu angsa, dll.",
+    "CL_SL_CM_how_to_care_detail": "Membantu Anda cara merawat berbagai jenis pakaian seperti sutra, wol, kulit, jaket bulu angsa, dll.",
+    "CL_SL_CM_drum_cleaning_about_detail": "Fungsi pembersihan tabung mesin cuci adalah siklus pembersihan otomatis yang dirancang untuk menghilangkan jamur atau bakteri lain yang mungkin menumpuk di dalam tabung karena penggunaan umum.",
+    "CL_SL_CM_drum_clean_wash_cycles": "siklus pencucian",
+    "CL_SL_CM_drum_clean_recommended_cycles": "disarankan untuk membersihkan drum setelah 45 kali pencucian, Anda dapat mengaturnya di halaman perangkat",
+    "CL_SL_CM_progam_send_warning2": "Maaf, program tidak dapat mengirim, silakan hidupkan perangkat Anda.",
+    "CL_SL_CM_energy_monitor": "PERGI KE MONITOR ENERGI",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Nama sebagai D**CW, seperti D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
