--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Vai agli extra",
     "CL_SL_CM_visualization": "Visualizzazione",
     "CL_SL_CM_laundry_usage_report": "Rapporto sull'utilizzo della lavanderia",
-    "CL_SL_CM_usage_month": "Utilizzo del mese",
     "CL_SL_CM_about_usage_month": "Informazioni sull'utilizzo del mese",
     "CL_SL_CM_about_usage_month_detail": "I dati indicati sono stime, non misurazioni esatte. Le nostre stime si basano su test controllati, pertanto i risultati effettivi potrebbero variare. Il consumo energetico reale dipende dall'ambiente e dalle abitudini specifiche.",
-    "CL_SL_CM_drum_cleaning_title": "Pulizia del tamburo",
     "CL_SL_CM_drum_cleaning_great_job": "Il cestello della lavatrice è pulito e hai fatto un ottimo lavoro!",
     "CL_SL_CM_drum_cleaning_warning": "È stato lavato molte volte dall'ultima pulizia del cestello e si consiglia di utilizzarlo per rendere il bucato più pulito.",
     "CL_SL_CM_drum_cleaning_about": "Informazioni sulla pulizia del tamburo",
-    "CL_SL_CM_drum_cleaning_about_detail": "La funzione di pulizia del cestello della lavatrice è un ciclo di autopulizia studiato per rimuovere muffe o altri batteri che potrebbero accumularsi all'interno del cestello a causa dell'uso normale. Si consiglia di effettuare la pulizia del cestello dopo 30 cicli di lavaggio.",
     "CL_SL_CM_data_statistics": "Statistiche dei dati",
     "CL_SL_CM_data_statistics_about": "Informazioni sulle statistiche dei dati",
     "CL_SL_CM_data_statistics_about_detail": "“Altri” è la somma di quelli meno utilizzati.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Biblioteca di lavanderia",
     "CL_SL_CM_how_to_wash": "Come lavare",
     "CL_SL_CM_how_to_care": "Come prendersi cura",
-    "CL_SL_CM_how_to_wash_detail": "Ti insegneremo come lavare diversi tipi di indumenti, come seta, lana, pelle, piumini, ecc.",
-    "CL_SL_CM_how_to_care_detail": "Ti insegnerà come prenderti cura di diversi tipi di indumenti, come seta, lana, pelle, piumini, ecc.",
     "CL_SL_CM_articles": "articoli",
     "CL_SL_CM_assistant_title": "Addetto alla lavanderia",
     "CL_SL_CM_ai_wash_dry": "Lavaggio e asciugatura AI",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Questi programmi si basano sulle tue abitudini quotidiane e sui questionari.",
     "CL_SL_CM_redo_the_questionnaire": "RIFARE IL QUESTIONARIO",
     "CL_SL_CM_laundry_title": "Lavanderia",
-    "CL_SL_CM_laundry_services_title": "Servizi di lavanderia personalizzati",
     "CL_SL_CM_laundry_services_detail": "Benvenuti! Rispondete alle seguenti domande per aiutarci a consigliarvi programmi di lavanderia migliori, migliorando così la vostra esperienza complessiva di lavanderia.",
     "CL_SL_CM_recommended_program_guide": "Consiglia la guida al programma",
     "CL_SL_CM_let's_get_started": "Cominciamo!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Il tuo dispositivo è offline",
     "CL_CF_AS_waiting": "in attesa...",
     "CL_CF_CS_window_air_select_panel": "Seleziona l'immagine che corrisponde al pannello di controllo della tua unità.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Selezionare la zona di cottura o le zone collegate che si desidera utilizzare. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Selezionare la zona di cottura o le zone collegate che si desidera utilizzare. ",
+    "CL_CF_HP_Add_Automation": "Aggiungi automazione",
+    "CL_CF_HP_Add_Automation_tip": "Puoi aggiungere qui le routine manuali più utilizzate",
+    "CL_CF_HP_Add_Home_Status": "Aggiungi stato casa",
+    "CL_CF_HP_Add_Home_Status_tip": "Puoi aggiungere qui le schede dei dispositivi più utilizzati",
+    "CL_CF_HP_Add_Things_To_Do": "Aggiungi cose da fare",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Puoi aggiungere qui i widget più utilizzati",
+    "CL_CF_HP_Add_Discover": "Aggiungi Scopri",
+    "CL_CF_HP_Add_Discover_tip": "Puoi aggiungere i suggerimenti più utilizzati qui",
+    "CL_CF_HP_no_device_tip": "Collega i tuoi dispositivi",
+    "CL_CF_AS_check_devices": "Controlla lo stato del tuo dispositivo.",
+    "CL_CF_AS_scan": "SCANSIONE",
+    "CL_CF_HP_device_skip_tips": "Puoi tornare alla home page della vecchia versione trovando l'impostazione della scheda home in personalizza aspetto nella pagina del menu",
+    "CL_CF_HP_reset_card_tips": "Vuoi davvero ripristinare le impostazioni predefinite iniziali?",
+    "CL_SL_CM_laundry_services_title": "Personalizza il tuo bucato",
+    "CL_SL_CM_usage_month": "Utilizzo mensile",
+    "CL_SL_CM_how_to_wash_detail": "Ti aiuterà a lavare diversi tipi di indumenti, come seta, lana, pelle, piumini, ecc.",
+    "CL_SL_CM_how_to_care_detail": "Ti aiuterà a prenderti cura di diversi tipi di indumenti, come seta, lana, pelle, piumini, ecc.",
+    "CL_SL_CM_drum_cleaning_about_detail": "La funzione di pulizia del cestello della lavatrice è un ciclo di autopulizia studiato per rimuovere muffe o altri batteri che potrebbero accumularsi all'interno del cestello a causa dell'uso normale.",
+    "CL_SL_CM_drum_clean_wash_cycles": "cicli di lavaggio",
+    "CL_SL_CM_drum_clean_recommended_cycles": "pulizia del cestello consigliata dopo 45 lavaggi, puoi impostarla nella pagina del dispositivo",
+    "CL_SL_CM_progam_send_warning2": "Spiacenti, il programma non può inviare, accendi il dispositivo.",
+    "CL_SL_CM_energy_monitor": "VAI A ENERGY MONITOR",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Nome come D**CW, come D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
