--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "エクストラへ進む",
     "CL_SL_CM_visualization": "視覚化",
     "CL_SL_CM_laundry_usage_report": "ランドリー使用レポート",
-    "CL_SL_CM_usage_month": "今月の使用状況",
     "CL_SL_CM_about_usage_month": "月間使用量について",
     "CL_SL_CM_about_usage_month_detail": "表示されるデータは推定値であり、正確な測定値ではありません。推定値は管理されたテストに基づいているため、実際の結果は異なる場合があります。実際のエネルギー使用量は、特定の環境と習慣によって異なります。",
-    "CL_SL_CM_drum_cleaning_title": "ドラム洗浄",
     "CL_SL_CM_drum_cleaning_great_job": "洗濯機のドラムはきれいになりました。素晴らしい仕事ですね!",
     "CL_SL_CM_drum_cleaning_warning": "前回のドラム洗浄から何度も洗浄されており、洗濯物をより清潔にするために使用することをお勧めします。",
     "CL_SL_CM_drum_cleaning_about": "ドラム洗浄について",
-    "CL_SL_CM_drum_cleaning_about_detail": "洗濯機のドラム洗浄機能は、通常の使用でドラム内に蓄積した可能性のあるカビやその他の細菌を除去するように設計されたセルフクリーニングサイクルです。洗濯サイクルを 30 回実行した後、ドラム洗浄を行うことをお勧めします。",
     "CL_SL_CM_data_statistics": "データ統計",
     "CL_SL_CM_data_statistics_about": "データ統計について",
     "CL_SL_CM_data_statistics_about_detail": "「その他」は、あまり使用されないものの合計です。",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "ランドリーライブラリ",
     "CL_SL_CM_how_to_wash": "洗い方",
     "CL_SL_CM_how_to_care": "お手入れ方法",
-    "CL_SL_CM_how_to_wash_detail": "シルク、ウール、レザー、ダウンジャケットなど、さまざまな種類の衣類の洗濯方法を教えます。",
-    "CL_SL_CM_how_to_care_detail": "シルク、ウール、レザー、ダウンジャケットなど、さまざまな種類の衣類のお手入れ方法を教えます。",
     "CL_SL_CM_articles": "記事",
     "CL_SL_CM_assistant_title": "ランドリーアシスタント",
     "CL_SL_CM_ai_wash_dry": "AI ウォッシュ＆ドライ",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "これらのプログラムは、あなたの日常の習慣とアンケートに基づいています。",
     "CL_SL_CM_redo_the_questionnaire": "アンケートをやり直す",
     "CL_SL_CM_laundry_title": "ランドリー",
-    "CL_SL_CM_laundry_services_title": "パーソナライズされたランドリーサービス",
     "CL_SL_CM_laundry_services_detail": "ようこそ！以下の質問にご回答いただくことで、より良いランドリー プログラムを推奨し、全体的なランドリー体験を向上させることができます。",
     "CL_SL_CM_recommended_program_guide": "おすすめ番組ガイド",
     "CL_SL_CM_let's_get_started": "さあ始めましょう！",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "デバイスがオフラインです",
     "CL_CF_AS_waiting": "待っている...",
     "CL_CF_CS_window_air_select_panel": "ユニットのコントロール パネルに一致する画像を選択します。",
-    "CL_DV_HOB_program_zone_bridge_step2": "使用する調理ゾーンまたはブリッジゾーンを選択します。 "
+    "CL_DV_HOB_program_zone_bridge_step2": "使用する調理ゾーンまたはブリッジゾーンを選択します。 ",
+    "CL_CF_HP_Add_Automation": "自動化を追加する",
+    "CL_CF_HP_Add_Automation_tip": "最もよく使用される手動ルーチンをここに追加できます",
+    "CL_CF_HP_Add_Home_Status": "ホームステータスを追加",
+    "CL_CF_HP_Add_Home_Status_tip": "最もよく使用されるデバイスカードをここに追加できます",
+    "CL_CF_HP_Add_Things_To_Do": "やることリストを追加する",
+    "CL_CF_HP_Add_Things_To_Do_tip": "最もよく使用されるウィジェットをここに追加できます",
+    "CL_CF_HP_Add_Discover": "発見を追加",
+    "CL_CF_HP_Add_Discover_tip": "最もよく使われるヒントをここに追加できます",
+    "CL_CF_HP_no_device_tip": "デバイスを接続する",
+    "CL_CF_AS_check_devices": "機器の状態を確認してください",
+    "CL_CF_AS_scan": "スキャン",
+    "CL_CF_HP_device_skip_tips": "メニューページの外観のカスタマイズでホームタブ設定を見つけることで、古いバージョンのホームページに戻ることができます。",
+    "CL_CF_HP_reset_card_tips": "初期デフォルト設定にリセットしてもよろしいですか?",
+    "CL_SL_CM_laundry_services_title": "洗濯物をカスタマイズ",
+    "CL_SL_CM_usage_month": "月間使用量",
+    "CL_SL_CM_how_to_wash_detail": "シルク、ウール、レザー、ダウンジャケットなど、さまざまな種類の衣類の洗濯方法を説明します。",
+    "CL_SL_CM_how_to_care_detail": "シルク、ウール、レザー、ダウンジャケットなど、さまざまな種類の衣類のお手入れ方法をご紹介します。",
+    "CL_SL_CM_drum_cleaning_about_detail": "洗濯機のドラム洗浄機能は、通常の使用によってドラム内に蓄積される可能性のあるカビやその他の細菌を除去するように設計されたセルフクリーニングサイクルです。",
+    "CL_SL_CM_drum_clean_wash_cycles": "洗濯サイクル",
+    "CL_SL_CM_drum_clean_recommended_cycles": "45回の洗濯後にドラム洗浄を推奨します。デバイスページで設定できます。",
+    "CL_SL_CM_progam_send_warning2": "申し訳ありませんが、プログラムは送信できません。デバイスの電源をオンにしてください。",
+    "CL_SL_CM_energy_monitor": "エネルギーモニターへ",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "名前は D**CW です（例: D12CW、D16CW）。",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
