--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Қосымшаға барыңыз",
     "CL_SL_CM_visualization": "Визуализация",
     "CL_SL_CM_laundry_usage_report": "Кірді пайдалану туралы есеп",
-    "CL_SL_CM_usage_month": "Айдың қолданылуы",
     "CL_SL_CM_about_usage_month": "Айдың қолданылуы туралы",
     "CL_SL_CM_about_usage_month_detail": "Көрсетілген деректер нақты өлшемдер емес, шамалар болып табылады. Біздің бағалауларымыз бақыланатын сынақтарға негізделген, сондықтан нақты нәтижелеріңіз әртүрлі болуы мүмкін. Нақты әлемдегі энергияны пайдалану нақты ортаңызға және әдеттеріңізге байланысты.",
-    "CL_SL_CM_drum_cleaning_title": "Барабан тазалау",
     "CL_SL_CM_drum_cleaning_great_job": "Жуғыш барабан таза және сіз тамаша жұмыс жасадыңыз!",
     "CL_SL_CM_drum_cleaning_warning": "Барабанды соңғы тазалаудан кейін ол бірнеше рет жуылды және оны кір жууға арналған құрал жасау үшін пайдалану ұсынылады.",
     "CL_SL_CM_drum_cleaning_about": "Барабандарды тазалау туралы",
-    "CL_SL_CM_drum_cleaning_about_detail": "Кір жуғыш машина барабанын тазалау функциясы жалпы пайдалану арқылы барабанның ішінде жиналуы мүмкін зеңді немесе басқа бактерияларды кетіруге арналған өзін-өзі тазалау циклы болып табылады. 30 кір жуу циклынан кейін барабанды тазалауды ұсынамыз.",
     "CL_SL_CM_data_statistics": "Деректер статистикасы",
     "CL_SL_CM_data_statistics_about": "Деректер статистикасы туралы",
     "CL_SL_CM_data_statistics_about_detail": "«Басқалар» - аз қолданылатындардың қосындысы.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Кір жуу кітапханасы",
     "CL_SL_CM_how_to_wash": "Қалай жуу керек",
     "CL_SL_CM_how_to_care": "Қалай күтім жасау керек",
-    "CL_SL_CM_how_to_wash_detail": "Сізге әртүрлі киім түрлерін, мысалы, жібек, жүн, былғары және мамық курткалар, т.б. жууды үйретіңіз.",
-    "CL_SL_CM_how_to_care_detail": "Сізге әртүрлі киім түрлерін, мысалы, жібек, жүн, былғары және мамық курткалар, т.б. күтім жасауды үйретіңіз.",
     "CL_SL_CM_articles": "мақалалар",
     "CL_SL_CM_assistant_title": "Кір жууға көмекші",
     "CL_SL_CM_ai_wash_dry": "Жуу және кептіру",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Бұл бағдарламалар сіздің күнделікті әдеттеріңіз бен сауалнамаларыңызға негізделген.",
     "CL_SL_CM_redo_the_questionnaire": "САУАЛНАМАСЫН ҚАЙТА ЖАСАҢЫЗ",
     "CL_SL_CM_laundry_title": "Кір",
-    "CL_SL_CM_laundry_services_title": "Жекелеген кір жуу қызметтері",
     "CL_SL_CM_laundry_services_detail": "Қош келдіңіз! Жақсырақ кір жуу бағдарламаларын ұсынуға, жалпы кір жуу тәжірибеңізді жақсартуға көмектесу үшін келесі сұрақтарға жауап беріңіз.",
     "CL_SL_CM_recommended_program_guide": "Бағдарлама нұсқаулығын ұсыныңыз",
     "CL_SL_CM_let's_get_started": "Бастайық!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Құрылғыңыз желіден тыс",
     "CL_CF_AS_waiting": "күтуде...",
     "CL_CF_CS_window_air_select_panel": "Құрылғының басқару тақтасына сәйкес келетін кескінді таңдаңыз.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Пайдаланғыңыз келетін пісіру аймағын немесе көпірленген аймақтарды таңдаңыз. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Пайдаланғыңыз келетін пісіру аймағын немесе көпірленген аймақтарды таңдаңыз. ",
+    "CL_CF_HP_Add_Automation": "Автоматтандыруды қосыңыз",
+    "CL_CF_HP_Add_Automation_tip": "Мұнда ең көп қолданылатын қолмен жұмыс режимдерін қосуға болады",
+    "CL_CF_HP_Add_Home_Status": "Үй күйін қосу",
+    "CL_CF_HP_Add_Home_Status_tip": "Мұнда ең көп қолданылатын құрылғы карталарын қосуға болады",
+    "CL_CF_HP_Add_Things_To_Do": "Орындалатын нәрселерді қосыңыз",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Мұнда ең көп қолданылатын виджеттерді қосуға болады",
+    "CL_CF_HP_Add_Discover": "Discover қосу",
+    "CL_CF_HP_Add_Discover_tip": "Мұнда ең көп қолданылатын кеңестерді қосуға болады",
+    "CL_CF_HP_no_device_tip": "Құрылғыларды қосыңыз",
+    "CL_CF_AS_check_devices": "Құрылғыңыздың күйін тексеріңіз.",
+    "CL_CF_AS_scan": "SCAN",
+    "CL_CF_HP_device_skip_tips": "Мәзір бетіндегі сыртқы түрін теңшеу арқылы бастапқы қойынды параметрін табу арқылы ескі нұсқаның басты бетіне оралуға болады",
+    "CL_CF_HP_reset_card_tips": "Бастапқы әдепкі параметрлерді қалпына келтіргіңіз келетініне сенімдісіз бе?",
+    "CL_SL_CM_laundry_services_title": "Кірді жекелендіріңіз",
+    "CL_SL_CM_usage_month": "Ай сайынғы пайдалану",
+    "CL_SL_CM_how_to_wash_detail": "Жібек, жүн, былғары және мамық күртешелер сияқты әртүрлі киім түрлерін жууға көмектесіңіз.",
+    "CL_SL_CM_how_to_care_detail": "Жібек, жүн, былғары және мамық курткалар, т.б. сияқты әртүрлі киім түрлерін күтуге көмектесіңіз.",
+    "CL_SL_CM_drum_cleaning_about_detail": "Кір жуғыш машинаның барабанын тазалау функциясы жалпы пайдалану арқылы барабанның ішінде жиналуы мүмкін зеңді немесе басқа бактерияларды жоюға арналған өзін-өзі тазалау циклі болып табылады.",
+    "CL_SL_CM_drum_clean_wash_cycles": "жуу циклдары",
+    "CL_SL_CM_drum_clean_recommended_cycles": "барабанды 45 рет жуудан кейін тазалау ұсынылады, оны құрылғы бетінде орнатуға болады",
+    "CL_SL_CM_progam_send_warning2": "Кешіріңіз, бағдарлама жіберу мүмкін емес, құрылғыңызды қосыңыз.",
+    "CL_SL_CM_energy_monitor": "ЭНЕРГИЯ МОНИТОРЫНА ӨТІҢІЗ",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "D**CW деп атаңыз, мысалы D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
