--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "추가 기능으로 이동",
     "CL_SL_CM_visualization": "심상",
     "CL_SL_CM_laundry_usage_report": "세탁물 사용 보고서",
-    "CL_SL_CM_usage_month": "이번 달의 사용량",
     "CL_SL_CM_about_usage_month": "이번달 사용량에 대하여",
     "CL_SL_CM_about_usage_month_detail": "표시된 데이터는 정확한 측정치가 아닌 추정치입니다. 추정치는 통제된 테스트를 기반으로 하므로 실제 결과는 다를 수 있습니다. 실제 에너지 사용량은 사용자의 특정 환경과 습관에 따라 달라집니다.",
-    "CL_SL_CM_drum_cleaning_title": "드럼 세척",
     "CL_SL_CM_drum_cleaning_great_job": "세탁기 드럼이 깨끗하고 정말 좋은 일을 하셨네요!",
     "CL_SL_CM_drum_cleaning_warning": "마지막으로 드럼을 청소한 이후 여러 번 세탁을 했으며, 세탁물을 더 깨끗하게 만들기 위해 사용하는 것이 좋습니다.",
     "CL_SL_CM_drum_cleaning_about": "드럼 청소에 대하여",
-    "CL_SL_CM_drum_cleaning_about_detail": "세탁기 드럼 세척 기능은 일반적인 사용으로 인해 드럼 내부에 쌓일 수 있는 곰팡이나 기타 박테리아를 제거하기 위해 고안된 자체 세척 주기입니다. 세탁 주기를 30회 반복한 후에는 드럼 세척을 하는 것이 좋습니다.",
     "CL_SL_CM_data_statistics": "데이터 통계",
     "CL_SL_CM_data_statistics_about": "데이터 통계에 대하여",
     "CL_SL_CM_data_statistics_about_detail": "'기타'는 덜 사용되는 것들의 합계입니다.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "세탁소 도서관",
     "CL_SL_CM_how_to_wash": "세탁 방법",
     "CL_SL_CM_how_to_care": "어떻게 돌보나요",
-    "CL_SL_CM_how_to_wash_detail": "실크, 울, 가죽, 다운 재킷 등 다양한 종류의 의류를 세탁하는 방법을 알려드립니다.",
-    "CL_SL_CM_how_to_care_detail": "실크, 울, 가죽, 다운 재킷 등 다양한 종류의 의류 관리 방법을 알려드립니다.",
     "CL_SL_CM_articles": "조항",
     "CL_SL_CM_assistant_title": "세탁 보조원",
     "CL_SL_CM_ai_wash_dry": "AI 워시앤드라이",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "이러한 프로그램은 귀하의 일상 습관과 설문조사를 바탕으로 만들어졌습니다.",
     "CL_SL_CM_redo_the_questionnaire": "설문지를 다시 작성하세요",
     "CL_SL_CM_laundry_title": "빨래",
-    "CL_SL_CM_laundry_services_title": "개인 맞춤형 세탁 서비스",
     "CL_SL_CM_laundry_services_detail": "환영합니다! 다음 질문에 답하여 더 나은 세탁 프로그램을 추천하고 전반적인 세탁 경험을 향상시키는 데 도움을 주세요.",
     "CL_SL_CM_recommended_program_guide": "추천 프로그램 가이드",
     "CL_SL_CM_let's_get_started": "시작해 볼까요!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "귀하의 기기는 오프라인 상태입니다.",
     "CL_CF_AS_waiting": "대기 중...",
     "CL_CF_CS_window_air_select_panel": "귀하의 장치 제어판과 일치하는 이미지를 선택하세요.",
-    "CL_DV_HOB_program_zone_bridge_step2": "사용하고 싶은 조리 구역이나 브리지 구역을 선택하세요. "
+    "CL_DV_HOB_program_zone_bridge_step2": "사용하고 싶은 조리 구역이나 브리지 구역을 선택하세요. ",
+    "CL_CF_HP_Add_Automation": "자동화 추가",
+    "CL_CF_HP_Add_Automation_tip": "가장 많이 사용되는 수동 루틴을 여기에 추가할 수 있습니다.",
+    "CL_CF_HP_Add_Home_Status": "홈 상태 추가",
+    "CL_CF_HP_Add_Home_Status_tip": "가장 많이 사용하는 장치 카드를 여기에 추가할 수 있습니다.",
+    "CL_CF_HP_Add_Things_To_Do": "할 일 추가",
+    "CL_CF_HP_Add_Things_To_Do_tip": "가장 많이 사용되는 위젯을 여기에 추가할 수 있습니다",
+    "CL_CF_HP_Add_Discover": "발견 추가",
+    "CL_CF_HP_Add_Discover_tip": "가장 많이 사용되는 팁을 여기에 추가할 수 있습니다",
+    "CL_CF_HP_no_device_tip": "기기를 연결하세요",
+    "CL_CF_AS_check_devices": "장치의 상태를 확인하십시오.",
+    "CL_CF_AS_scan": "주사",
+    "CL_CF_HP_device_skip_tips": "메뉴 페이지에서 모양 사용자 정의에서 홈 탭 설정을 찾아 이전 버전 홈페이지로 돌아갈 수 있습니다.",
+    "CL_CF_HP_reset_card_tips": "초기 기본 설정으로 재설정하시겠습니까?",
+    "CL_SL_CM_laundry_services_title": "세탁 서비스를 개인화하세요",
+    "CL_SL_CM_usage_month": "월간 사용량",
+    "CL_SL_CM_how_to_wash_detail": "실크, 울, 가죽, 다운 재킷 등 다양한 종류의 의류를 세탁하는 방법을 알려드립니다.",
+    "CL_SL_CM_how_to_care_detail": "실크, 울, 가죽, 다운 재킷 등 다양한 종류의 의류를 관리하는 방법을 알려드립니다.",
+    "CL_SL_CM_drum_cleaning_about_detail": "세탁기 드럼 세척 기능은 일반적인 사용으로 인해 드럼 내부에 쌓일 수 있는 곰팡이나 기타 박테리아를 제거하기 위해 고안된 자체 세척 주기입니다.",
+    "CL_SL_CM_drum_clean_wash_cycles": "세탁 주기",
+    "CL_SL_CM_drum_clean_recommended_cycles": "45회 세탁 후 권장 드럼 세척, 기기 페이지에서 설정할 수 있습니다.",
+    "CL_SL_CM_progam_send_warning2": "죄송합니다. 프로그램을 전송할 수 없습니다. 기기를 켜주세요.",
+    "CL_SL_CM_energy_monitor": "에너지 모니터로 이동",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "이름은 D**CW, D12CW, D16CW와 같습니다.",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
