--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Pergi ke tambahan",
     "CL_SL_CM_visualization": "Visualisasi",
     "CL_SL_CM_laundry_usage_report": "Laporan penggunaan dobi",
-    "CL_SL_CM_usage_month": "Penggunaan bulan",
     "CL_SL_CM_about_usage_month": "Mengenai penggunaan bulan tersebut",
     "CL_SL_CM_about_usage_month_detail": "Data yang ditunjukkan ialah anggaran, bukan ukuran tepat. Anggaran kami adalah berdasarkan ujian terkawal, jadi keputusan sebenar anda mungkin berbeza-beza. Penggunaan tenaga dunia sebenar bergantung pada persekitaran dan tabiat khusus anda.",
-    "CL_SL_CM_drum_cleaning_title": "Pembersihan dram",
     "CL_SL_CM_drum_cleaning_great_job": "Drum mesin basuh bersih dan anda melakukan kerja yang hebat!",
     "CL_SL_CM_drum_cleaning_warning": "Ia telah dibasuh berkali-kali sejak pembersihan dram terakhir, dan disyorkan untuk menggunakannya untuk membuat pencuci pakaian.",
     "CL_SL_CM_drum_cleaning_about": "Mengenai pembersihan dram",
-    "CL_SL_CM_drum_cleaning_about_detail": "Fungsi pembersihan dram mesin basuh ialah kitaran pembersihan sendiri yang direka untuk membuang acuan atau bakteria lain yang mungkin terkumpul di dalam dram melalui penggunaan umum. Kami mengesyorkan agar anda melakukan pembersihan dram selepas 30 kitaran cucian.",
     "CL_SL_CM_data_statistics": "Statistik data",
     "CL_SL_CM_data_statistics_about": "Mengenai statistik data",
     "CL_SL_CM_data_statistics_about_detail": "\"Lain-lain\" ialah jumlah yang kurang digunakan.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Perpustakaan dobi",
     "CL_SL_CM_how_to_wash": "Cara mencuci",
     "CL_SL_CM_how_to_care": "Bagaimana untuk menjaga",
-    "CL_SL_CM_how_to_wash_detail": "Ajar anda cara Mencuci pelbagai jenis pakaian seperti sutera, bulu, kulit dan jaket bawah, dsb.",
-    "CL_SL_CM_how_to_care_detail": "Ajar anda cara menjaga pelbagai jenis pakaian seperti sutera, bulu, kulit dan jaket bawah, dsb.",
     "CL_SL_CM_articles": "artikel",
     "CL_SL_CM_assistant_title": "Pembantu dobi",
     "CL_SL_CM_ai_wash_dry": "AI Basuh & Keringkan",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Program ini adalah berdasarkan tabiat harian dan soal selidik anda.",
     "CL_SL_CM_redo_the_questionnaire": "BUAT SEMULA SOAL SELIDIK",
     "CL_SL_CM_laundry_title": "Dobi",
-    "CL_SL_CM_laundry_services_title": "Perkhidmatan dobi peribadi",
     "CL_SL_CM_laundry_services_detail": "Selamat datang! Jawab soalan berikut untuk membantu kami mengesyorkan program dobi yang lebih baik, meningkatkan pengalaman dobi anda secara keseluruhan.",
     "CL_SL_CM_recommended_program_guide": "Mengesyorkan panduan program",
     "CL_SL_CM_let's_get_started": "Mari mulakan!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Peranti anda di luar talian",
     "CL_CF_AS_waiting": "menunggu...",
     "CL_CF_CS_window_air_select_panel": "Pilih imej yang sepadan dengan panel kawalan unit anda.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Pilih zon memasak atau zon jambatan yang anda mahu gunakan. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Pilih zon memasak atau zon jambatan yang anda mahu gunakan. ",
+    "CL_CF_HP_Add_Automation": "Tambah Automasi",
+    "CL_CF_HP_Add_Automation_tip": "Anda boleh menambah rutin manual yang paling banyak digunakan di sini",
+    "CL_CF_HP_Add_Home_Status": "Tambah Status Rumah",
+    "CL_CF_HP_Add_Home_Status_tip": "Anda boleh menambah kad peranti yang paling banyak digunakan di sini",
+    "CL_CF_HP_Add_Things_To_Do": "Tambah Perkara Yang Perlu Dilakukan",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Anda boleh menambah widget yang paling banyak digunakan di sini",
+    "CL_CF_HP_Add_Discover": "Tambah Discover",
+    "CL_CF_HP_Add_Discover_tip": "Anda boleh menambah petua yang paling banyak digunakan di sini",
+    "CL_CF_HP_no_device_tip": "Sambungkan peranti anda",
+    "CL_CF_AS_check_devices": "Semak status peranti anda.",
+    "CL_CF_AS_scan": "IMBAS",
+    "CL_CF_HP_device_skip_tips": "Anda boleh kembali ke halaman utama versi lama dengan mencari tetapan tab rumah di menyesuaikan penampilan pada halaman menu",
+    "CL_CF_HP_reset_card_tips": "Adakah anda pasti mahu menetapkan semula kepada tetapan lalai awal?",
+    "CL_SL_CM_laundry_services_title": "Peribadikan pakaian anda",
+    "CL_SL_CM_usage_month": "Penggunaan bulanan",
+    "CL_SL_CM_how_to_wash_detail": "Membantu anda cara Mencuci pelbagai jenis pakaian seperti sutera, bulu, kulit dan jaket bulu, dsb.",
+    "CL_SL_CM_how_to_care_detail": "Membantu anda cara menjaga pelbagai jenis pakaian seperti sutera, bulu, kulit dan jaket bulu, dsb.",
+    "CL_SL_CM_drum_cleaning_about_detail": "Fungsi pembersihan dram mesin basuh ialah kitaran pembersihan diri yang direka untuk membuang acuan atau bakteria lain yang mungkin terkumpul di dalam dram melalui penggunaan umum.",
+    "CL_SL_CM_drum_clean_wash_cycles": "kitaran basuh",
+    "CL_SL_CM_drum_clean_recommended_cycles": "disyorkan membersihkan dram selepas 45 cucian, anda boleh menetapkannya dalam halaman peranti",
+    "CL_SL_CM_progam_send_warning2": "Maaf, program tidak boleh menghantar, sila hidupkan peranti anda.",
+    "CL_SL_CM_energy_monitor": "PERGI KE PEMANTAUAN TENAGA",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Namakan sebagai D**CW, seperti D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
