--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Gå til ekstra",
     "CL_SL_CM_visualization": "Visualisering",
     "CL_SL_CM_laundry_usage_report": "Rapport om bruk av vaskeri",
-    "CL_SL_CM_usage_month": "Månedens bruk",
     "CL_SL_CM_about_usage_month": "Om månedens bruk",
     "CL_SL_CM_about_usage_month_detail": "Dataene som vises er estimater, ikke eksakte målinger. Våre estimater er basert på kontrollerte tester, så de faktiske resultatene dine kan variere. Den virkelige energibruken avhenger av ditt spesifikke miljø og dine vaner.",
-    "CL_SL_CM_drum_cleaning_title": "Trommelrengjøring",
     "CL_SL_CM_drum_cleaning_great_job": "Vasketrommelen er ren og du gjorde en god jobb!",
     "CL_SL_CM_drum_cleaning_warning": "Den har blitt vasket mange ganger siden siste trommelrengjøring, og det anbefales å bruke den til å gjøre tøyet renere.",
     "CL_SL_CM_drum_cleaning_about": "Om trommelrengjøring",
-    "CL_SL_CM_drum_cleaning_about_detail": "En vaskemaskin trommelrengjøringsfunksjon er en selvrensende syklus designet for å fjerne mugg eller andre bakterier som sannsynligvis har bygget seg opp inne i trommelen ved generell bruk. Vi anbefaler at du gjør en trommelrengjøring etter 30 vaskesykluser.",
     "CL_SL_CM_data_statistics": "Datastatistikk",
     "CL_SL_CM_data_statistics_about": "Om datastatistikk",
     "CL_SL_CM_data_statistics_about_detail": "\"Andre\" er summen av mindre brukte.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Vaskeri bibliotek",
     "CL_SL_CM_how_to_wash": "Hvordan vaske",
     "CL_SL_CM_how_to_care": "Hvordan bry seg",
-    "CL_SL_CM_how_to_wash_detail": "Lær deg hvordan du vasker forskjellige typer klær som silke, ull, skinn og dunjakker osv.",
-    "CL_SL_CM_how_to_care_detail": "Lær deg hvordan du tar vare på forskjellige typer klær som silke, ull, skinn og dunjakker, etc.",
     "CL_SL_CM_articles": "artikler",
     "CL_SL_CM_assistant_title": "Vaskeassistent",
     "CL_SL_CM_ai_wash_dry": "AI vask og tørk",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Disse programmene er basert på dine daglige vaner og spørreskjemaer.",
     "CL_SL_CM_redo_the_questionnaire": "GJØR SPØRRESKEMAET på nytt",
     "CL_SL_CM_laundry_title": "Klesvask",
-    "CL_SL_CM_laundry_services_title": "Personlig klesvask",
     "CL_SL_CM_laundry_services_detail": "Velkomst! Svar på følgende spørsmål for å hjelpe oss med å anbefale bedre vaskeprogrammer, noe som forbedrer din generelle klesvaskopplevelse.",
     "CL_SL_CM_recommended_program_guide": "Anbefaler programguide",
     "CL_SL_CM_let's_get_started": "La oss komme i gang!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Enheten din er frakoblet",
     "CL_CF_AS_waiting": "venter...",
     "CL_CF_CS_window_air_select_panel": "Velg bildet som samsvarer med enhetens kontrollpanel.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Velg kokesonen eller de brokoblede sonene du vil bruke. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Velg kokesonen eller de brokoblede sonene du vil bruke. ",
+    "CL_CF_HP_Add_Automation": "Legg til automatisering",
+    "CL_CF_HP_Add_Automation_tip": "Du kan legge til de mest brukte manuelle rutinene her",
+    "CL_CF_HP_Add_Home_Status": "Legg til hjemmestatus",
+    "CL_CF_HP_Add_Home_Status_tip": "Du kan legge til de mest brukte enhetskortene her",
+    "CL_CF_HP_Add_Things_To_Do": "Legg til ting å gjøre",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Du kan legge til de mest brukte widgetene her",
+    "CL_CF_HP_Add_Discover": "Legg til Discover",
+    "CL_CF_HP_Add_Discover_tip": "Du kan legge til de mest brukte tipsene her",
+    "CL_CF_HP_no_device_tip": "Koble til enhetene dine",
+    "CL_CF_AS_check_devices": "Sjekk statusen til enheten din.",
+    "CL_CF_AS_scan": "SKANNING",
+    "CL_CF_HP_device_skip_tips": "Du kan gå tilbake til den gamle versjonens hjemmeside ved å finne innstillingen for fanen Hjem ved å tilpasse utseendet på menysiden",
+    "CL_CF_HP_reset_card_tips": "Er du sikker på at du vil tilbakestille til de opprinnelige standardinnstillingene?",
+    "CL_SL_CM_laundry_services_title": "Tilpass tøyet ditt",
+    "CL_SL_CM_usage_month": "Månedlig bruk",
+    "CL_SL_CM_how_to_wash_detail": "Hjelper deg med å vaske forskjellige typer klær som silke, ull, lær og dunjakker osv.",
+    "CL_SL_CM_how_to_care_detail": "Hjelper deg med å ta vare på ulike typer klær som silke, ull, lær og dunjakker osv.",
+    "CL_SL_CM_drum_cleaning_about_detail": "En vaskemaskin trommelrengjøringsfunksjon er en selvrensende syklus designet for å fjerne mugg eller andre bakterier som sannsynligvis har bygget seg opp inne i trommelen ved generell bruk.",
+    "CL_SL_CM_drum_clean_wash_cycles": "vaskesykluser",
+    "CL_SL_CM_drum_clean_recommended_cycles": "anbefalt trommelrengjøring etter 45 vask, kan du stille inn på enhetssiden",
+    "CL_SL_CM_progam_send_warning2": "Beklager, programmet kan ikke sende, vennligst slå på enheten.",
+    "CL_SL_CM_energy_monitor": "GÅ TIL ENERGY MONITOR",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Navn som D**CW, som D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
