--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Ir para extras",
     "CL_SL_CM_visualization": "Visualização",
     "CL_SL_CM_laundry_usage_report": "Relatório de uso de lavanderia",
-    "CL_SL_CM_usage_month": "Uso do mês",
     "CL_SL_CM_about_usage_month": "Sobre o uso do mês",
     "CL_SL_CM_about_usage_month_detail": "Os dados mostrados são estimativas, não medições exatas. Nossas estimativas são baseadas em testes controlados, portanto seus resultados reais podem variar. O uso de energia no mundo real depende do seu ambiente e hábitos específicos.",
-    "CL_SL_CM_drum_cleaning_title": "Limpeza de tambor",
     "CL_SL_CM_drum_cleaning_great_job": "O tambor da máquina de lavar está limpo e você fez um ótimo trabalho!",
     "CL_SL_CM_drum_cleaning_warning": "Ele foi lavado muitas vezes desde a última limpeza do tambor e é recomendável usá-lo para deixar a roupa mais limpa.",
     "CL_SL_CM_drum_cleaning_about": "Sobre limpeza de tambor",
-    "CL_SL_CM_drum_cleaning_about_detail": "A função de limpeza do tambor da máquina de lavar é um ciclo de autolimpeza projetado para remover mofo ou outras bactérias que podem ter se acumulado dentro do tambor devido ao uso geral. Recomendamos que você faça uma limpeza do tambor após 30 ciclos de lavagem.",
     "CL_SL_CM_data_statistics": "Estatísticas de dados",
     "CL_SL_CM_data_statistics_about": "Sobre estatísticas de dados",
     "CL_SL_CM_data_statistics_about_detail": "“Outros” é a soma dos menos utilizados.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Biblioteca de lavanderia",
     "CL_SL_CM_how_to_wash": "Como lavar",
     "CL_SL_CM_how_to_care": "Como cuidar",
-    "CL_SL_CM_how_to_wash_detail": "Ensinaremos como lavar diferentes tipos de roupas, como seda, lã, couro, jaquetas de plumas, etc.",
-    "CL_SL_CM_how_to_care_detail": "Ensinar você a cuidar de diferentes tipos de roupas, como seda, lã, couro, jaquetas de plumas, etc.",
     "CL_SL_CM_articles": "artigos",
     "CL_SL_CM_assistant_title": "Auxiliar de lavanderia",
     "CL_SL_CM_ai_wash_dry": "Lavagem e Secagem AI",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Esses programas são baseados em seus hábitos diários e questionários.",
     "CL_SL_CM_redo_the_questionnaire": "REFAZER O QUESTIONÁRIO",
     "CL_SL_CM_laundry_title": "Lavanderia",
-    "CL_SL_CM_laundry_services_title": "Serviços de lavanderia personalizados",
     "CL_SL_CM_laundry_services_detail": "Bem-vindo! Responda às seguintes perguntas para nos ajudar a recomendar melhores programas de lavanderia, aprimorando sua experiência geral de lavanderia.",
     "CL_SL_CM_recommended_program_guide": "Recomendar guia de programa",
     "CL_SL_CM_let's_get_started": "Vamos começar!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Seu dispositivo está offline",
     "CL_CF_AS_waiting": "esperando...",
     "CL_CF_CS_window_air_select_panel": "Selecione a imagem que corresponde ao painel de controle da sua unidade.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Selecione a zona de cozimento ou as zonas interligadas que você deseja usar. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Selecione a zona de cozimento ou as zonas interligadas que você deseja usar. ",
+    "CL_CF_HP_Add_Automation": "Adicionar automação",
+    "CL_CF_HP_Add_Automation_tip": "Você pode adicionar as rotinas manuais mais usadas aqui",
+    "CL_CF_HP_Add_Home_Status": "Adicionar status inicial",
+    "CL_CF_HP_Add_Home_Status_tip": "Você pode adicionar os cartões de dispositivos mais usados aqui",
+    "CL_CF_HP_Add_Things_To_Do": "Adicionar coisas para fazer",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Você pode adicionar os widgets mais usados aqui",
+    "CL_CF_HP_Add_Discover": "Adicionar Descobrir",
+    "CL_CF_HP_Add_Discover_tip": "Você pode adicionar as dicas mais usadas aqui",
+    "CL_CF_HP_no_device_tip": "Conecte seus dispositivos",
+    "CL_CF_AS_check_devices": "Verifique o estado do seu dispositivo.",
+    "CL_CF_AS_scan": "ESCANEAMENTO",
+    "CL_CF_HP_device_skip_tips": "Você pode voltar para a página inicial da versão antiga encontrando a configuração da guia inicial em personalizar a aparência na página do menu",
+    "CL_CF_HP_reset_card_tips": "Tem certeza de que deseja redefinir as configurações iniciais padrão?",
+    "CL_SL_CM_laundry_services_title": "Personalize sua lavanderia",
+    "CL_SL_CM_usage_month": "Uso mensal",
+    "CL_SL_CM_how_to_wash_detail": "Ajudar você a lavar diferentes tipos de roupas, como seda, lã, couro, jaquetas de plumas, etc.",
+    "CL_SL_CM_how_to_care_detail": "Ajudar você a cuidar de diferentes tipos de roupas, como seda, lã, couro, jaquetas de plumas, etc.",
+    "CL_SL_CM_drum_cleaning_about_detail": "A função de limpeza do tambor da máquina de lavar é um ciclo de autolimpeza projetado para remover mofo ou outras bactérias que podem ter se acumulado dentro do tambor devido ao uso geral.",
+    "CL_SL_CM_drum_clean_wash_cycles": "ciclos de lavagem",
+    "CL_SL_CM_drum_clean_recommended_cycles": "limpeza do tambor recomendada após 45 lavagens, você pode configurá-la na página do dispositivo",
+    "CL_SL_CM_progam_send_warning2": "Desculpe, o programa não pode enviar, ligue seu dispositivo.",
+    "CL_SL_CM_energy_monitor": "IR PARA MONITOR DE ENERGIA",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Nome como D**CW, como D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
