--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Du-te la extra",
     "CL_SL_CM_visualization": "Vizualizarea",
     "CL_SL_CM_laundry_usage_report": "Raport de utilizare a rufelor",
-    "CL_SL_CM_usage_month": "Utilizarea lunii",
     "CL_SL_CM_about_usage_month": "Despre utilizarea lunii",
     "CL_SL_CM_about_usage_month_detail": "Datele afișate sunt estimări, nu măsurători exacte. Estimările noastre se bazează pe teste controlate, astfel încât rezultatele dvs. reale pot varia. Utilizarea energiei în lumea reală depinde de mediul și obiceiurile dvs. specifice.",
-    "CL_SL_CM_drum_cleaning_title": "Curățarea tamburului",
     "CL_SL_CM_drum_cleaning_great_job": "Tamburul de spălat este curat și ai făcut o treabă grozavă!",
     "CL_SL_CM_drum_cleaning_warning": "A fost spalat de multe ori de la ultima curatare a tamburului si se recomanda folosirea lui pentru a face rufele curate.",
     "CL_SL_CM_drum_cleaning_about": "Despre curățarea tamburului",
-    "CL_SL_CM_drum_cleaning_about_detail": "O funcție de curățare a tamburului mașinii de spălat este un ciclu de auto-curățare conceput pentru a îndepărta mucegaiul sau alte bacterii care este probabil să se fi acumulat în interiorul tamburului prin utilizarea generală. Vă recomandăm să faceți o curățare a tamburului după 30 de cicluri de spălare.",
     "CL_SL_CM_data_statistics": "Statistici de date",
     "CL_SL_CM_data_statistics_about": "Despre statisticile datelor",
     "CL_SL_CM_data_statistics_about_detail": "„Alții” este suma celor mai puțin utilizate.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Biblioteca de spălătorie",
     "CL_SL_CM_how_to_wash": "Cum să se spele",
     "CL_SL_CM_how_to_care": "Cum să ai grijă",
-    "CL_SL_CM_how_to_wash_detail": "Vă învață cum să spălați diferite tipuri de îmbrăcăminte, cum ar fi mătase, lână, piele și jachete de puf etc.",
-    "CL_SL_CM_how_to_care_detail": "Te învață cum să îngrijești diferite tipuri de îmbrăcăminte, cum ar fi mătase, lână, piele și jachete de puf etc.",
     "CL_SL_CM_articles": "articole",
     "CL_SL_CM_assistant_title": "Asistent de spălătorie",
     "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Aceste programe se bazează pe obiceiurile și chestionarele tale zilnice.",
     "CL_SL_CM_redo_the_questionnaire": "REFACEȚI CHESTIONARUL",
     "CL_SL_CM_laundry_title": "Spălătorie",
-    "CL_SL_CM_laundry_services_title": "Servicii de spalatorie personalizate",
     "CL_SL_CM_laundry_services_detail": "Bun venit! Răspundeți la următoarele întrebări pentru a ne ajuta să vă recomandăm programe de spălătorie mai bune, îmbunătățindu-vă experiența generală de spălătorie.",
     "CL_SL_CM_recommended_program_guide": "Recomand ghidul de programe",
     "CL_SL_CM_let's_get_started": "Să începem!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Dispozitivul dvs. este offline",
     "CL_CF_AS_waiting": "aşteptare...",
     "CL_CF_CS_window_air_select_panel": "Selectați imaginea care se potrivește cu panoul de control al unității dvs.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Selectați zona de gătit sau zonele cu punte pe care doriți să le utilizați. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Selectați zona de gătit sau zonele cu punte pe care doriți să le utilizați. ",
+    "CL_CF_HP_Add_Automation": "Adăugați automatizare",
+    "CL_CF_HP_Add_Automation_tip": "Puteți adăuga aici cele mai utilizate rutine manuale",
+    "CL_CF_HP_Add_Home_Status": "Adăugați starea acasă",
+    "CL_CF_HP_Add_Home_Status_tip": "Puteți adăuga cele mai utilizate carduri de dispozitiv aici",
+    "CL_CF_HP_Add_Things_To_Do": "Adăugați lucruri de făcut",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Puteți adăuga cele mai utilizate widget-uri aici",
+    "CL_CF_HP_Add_Discover": "Adăugați Discover",
+    "CL_CF_HP_Add_Discover_tip": "Puteți adăuga cele mai folosite sfaturi aici",
+    "CL_CF_HP_no_device_tip": "Conectați-vă dispozitivele",
+    "CL_CF_AS_check_devices": "Verificați starea dispozitivului dvs.",
+    "CL_CF_AS_scan": "SCANĂ",
+    "CL_CF_HP_device_skip_tips": "Puteți reveni la pagina de pornire a versiunii vechi găsind setarea filei de pornire la personalizarea aspectului pe pagina de meniu",
+    "CL_CF_HP_reset_card_tips": "Sigur doriți să reveniți la setările implicite inițiale?",
+    "CL_SL_CM_laundry_services_title": "Personalizați-vă rufele",
+    "CL_SL_CM_usage_month": "Utilizare lunară",
+    "CL_SL_CM_how_to_wash_detail": "Vă ajută să spălați diferite tipuri de îmbrăcăminte, cum ar fi mătase, lână, piele și jachete de puf etc.",
+    "CL_SL_CM_how_to_care_detail": "Vă ajută să aveți grijă de diferite tipuri de îmbrăcăminte, cum ar fi mătase, lână, piele și jachete de puf etc.",
+    "CL_SL_CM_drum_cleaning_about_detail": "Funcția de curățare a tamburului mașinii de spălat este un ciclu de auto-curățare conceput pentru a îndepărta mucegaiul sau alte bacterii care este probabil să se fi acumulat în interiorul tamburului prin utilizarea generală.",
+    "CL_SL_CM_drum_clean_wash_cycles": "cicluri de spălare",
+    "CL_SL_CM_drum_clean_recommended_cycles": "Se recomandă curățarea tamburului după 45 de spălări, o puteți seta în pagina dispozitivului",
+    "CL_SL_CM_progam_send_warning2": "Ne pare rău, programul nu poate trimite, vă rugăm să porniți dispozitivul.",
+    "CL_SL_CM_energy_monitor": "MERCEȚI LA MONITORUL DE ENERGIE",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Numiți D**CW, cum ar fi D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
