--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Перейти к дополнительным материалам",
     "CL_SL_CM_visualization": "Визуализация",
     "CL_SL_CM_laundry_usage_report": "Отчет об использовании прачечной",
-    "CL_SL_CM_usage_month": "Использование месяца",
     "CL_SL_CM_about_usage_month": "Об использовании месяца",
     "CL_SL_CM_about_usage_month_detail": "Приведенные данные являются оценочными, а не точными измерениями. Наши оценки основаны на контролируемых испытаниях, поэтому ваши фактические результаты могут отличаться. Реальное потребление энергии зависит от вашей конкретной среды и привычек.",
-    "CL_SL_CM_drum_cleaning_title": "Очистка барабана",
     "CL_SL_CM_drum_cleaning_great_job": "Барабан стиральной машины чистый, вы отлично справились!",
     "CL_SL_CM_drum_cleaning_warning": "Его стирали много раз с момента последней чистки барабана, и его рекомендуется использовать для придания чистоты белью.",
     "CL_SL_CM_drum_cleaning_about": "О чистке барабана",
-    "CL_SL_CM_drum_cleaning_about_detail": "Функция очистки барабана стиральной машины — это цикл самоочистки, предназначенный для удаления плесени и других бактерий, которые могут скапливаться внутри барабана в процессе обычного использования. Мы рекомендуем выполнять очистку барабана после 30 циклов стирки.",
     "CL_SL_CM_data_statistics": "Статистика данных",
     "CL_SL_CM_data_statistics_about": "О статистике данных",
     "CL_SL_CM_data_statistics_about_detail": "«Другие» — это сумма менее используемых.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Библиотека прачечной",
     "CL_SL_CM_how_to_wash": "Как мыть",
     "CL_SL_CM_how_to_care": "Как ухаживать",
-    "CL_SL_CM_how_to_wash_detail": "Научу вас стирать различные виды одежды, такие как шелк, шерсть, кожа, пуховики и т. д.",
-    "CL_SL_CM_how_to_care_detail": "Научите вас ухаживать за различными типами одежды, такими как шелк, шерсть, кожа, пуховики и т. д.",
     "CL_SL_CM_articles": "статьи",
     "CL_SL_CM_assistant_title": "Помощник прачечной",
     "CL_SL_CM_ai_wash_dry": "Стирка и сушка AI",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Эти программы основаны на ваших ежедневных привычках и анкетах.",
     "CL_SL_CM_redo_the_questionnaire": "ПЕРЕДЕЛАЙТЕ АНКЕТУ",
     "CL_SL_CM_laundry_title": "Прачечная",
-    "CL_SL_CM_laundry_services_title": "Персонализированные услуги прачечной",
     "CL_SL_CM_laundry_services_detail": "Добро пожаловать! Ответьте на следующие вопросы, чтобы помочь нам порекомендовать лучшие программы стирки, которые улучшат ваши общие впечатления от стирки.",
     "CL_SL_CM_recommended_program_guide": "Рекомендовать программу передач",
     "CL_SL_CM_let's_get_started": "Давайте начнем!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Ваше устройство находится в автономном режиме",
     "CL_CF_AS_waiting": "ожидающий...",
     "CL_CF_CS_window_air_select_panel": "Выберите изображение, соответствующее панели управления вашего устройства.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Выберите зону приготовления пищи или объединенные зоны, которые вы хотите использовать. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Выберите зону приготовления пищи или объединенные зоны, которые вы хотите использовать. ",
+    "CL_CF_HP_Add_Automation": "Добавить автоматизацию",
+    "CL_CF_HP_Add_Automation_tip": "Вы можете добавить наиболее используемые ручные процедуры здесь",
+    "CL_CF_HP_Add_Home_Status": "Добавить домашний статус",
+    "CL_CF_HP_Add_Home_Status_tip": "Здесь вы можете добавить карты наиболее используемых устройств.",
+    "CL_CF_HP_Add_Things_To_Do": "Добавить дела",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Здесь вы можете добавить наиболее используемые виджеты",
+    "CL_CF_HP_Add_Discover": "Добавить Открыть",
+    "CL_CF_HP_Add_Discover_tip": "Вы можете добавить наиболее используемые советы здесь",
+    "CL_CF_HP_no_device_tip": "Подключите свои устройства",
+    "CL_CF_AS_check_devices": "Проверьте состояние прибора.",
+    "CL_CF_AS_scan": "СКАНИРОВАНИЕ",
+    "CL_CF_HP_device_skip_tips": "Вернуться на домашнюю страницу старой версии можно, найдя вкладку «Главная» в разделе «Настроить внешний вид» на странице меню.",
+    "CL_CF_HP_reset_card_tips": "Вы уверены, что хотите восстановить начальные настройки по умолчанию?",
+    "CL_SL_CM_laundry_services_title": "Персонализируйте свое белье",
+    "CL_SL_CM_usage_month": "Ежемесячное использование",
+    "CL_SL_CM_how_to_wash_detail": "Поможет вам стирать различные виды одежды, такие как шелк, шерсть, кожа, пуховики и т. д.",
+    "CL_SL_CM_how_to_care_detail": "Помочь вам ухаживать за различными типами одежды, такими как шелк, шерсть, кожа, пуховики и т. д.",
+    "CL_SL_CM_drum_cleaning_about_detail": "Функция очистки барабана стиральной машины — это цикл самоочистки, предназначенный для удаления плесени и других бактерий, которые могут скапливаться внутри барабана в процессе обычного использования.",
+    "CL_SL_CM_drum_clean_wash_cycles": "циклы стирки",
+    "CL_SL_CM_drum_clean_recommended_cycles": "рекомендуемая очистка барабана после 45 стирок, ее можно установить на странице устройства",
+    "CL_SL_CM_progam_send_warning2": "Извините, программа не может отправить, пожалуйста, включите ваше устройство.",
+    "CL_SL_CM_energy_monitor": "ПЕРЕЙТИ К МОНИТОРИНГУ ЭНЕРГИИ",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Имя как D**CW, например D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
