--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Gå till extra",
     "CL_SL_CM_visualization": "Visualisering",
     "CL_SL_CM_laundry_usage_report": "Tvättanvändningsrapport",
-    "CL_SL_CM_usage_month": "Månadens användning",
     "CL_SL_CM_about_usage_month": "Om månadens användning",
     "CL_SL_CM_about_usage_month_detail": "De data som visas är uppskattningar, inte exakta mätningar. Våra uppskattningar är baserade på kontrollerade tester, så dina faktiska resultat kan variera. Den verkliga energianvändningen beror på din specifika miljö och dina vanor.",
-    "CL_SL_CM_drum_cleaning_title": "trumrengöring",
     "CL_SL_CM_drum_cleaning_great_job": "Tvätttrumman är ren och du gjorde ett bra jobb!",
     "CL_SL_CM_drum_cleaning_warning": "Den har tvättats många gånger sedan den senaste trumrengöringen, och det rekommenderas att använda den för att göra tvätten renare.",
     "CL_SL_CM_drum_cleaning_about": "Om trumrengöring",
-    "CL_SL_CM_drum_cleaning_about_detail": "En tvättmaskins trumrengöringsfunktion är en självrengörande cykel utformad för att ta bort mögel eller andra bakterier som sannolikt har byggts upp inuti trumman genom allmän användning. Vi rekommenderar att du gör en trumrengöring efter 30 tvättcykler.",
     "CL_SL_CM_data_statistics": "Datastatistik",
     "CL_SL_CM_data_statistics_about": "Om datastatistik",
     "CL_SL_CM_data_statistics_about_detail": "\"Andra\" är summan av mindre använda.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Tvättbibliotek",
     "CL_SL_CM_how_to_wash": "Hur man tvättar",
     "CL_SL_CM_how_to_care": "Hur man bryr sig",
-    "CL_SL_CM_how_to_wash_detail": "Lär dig hur du tvättar olika typer av kläder som siden, ull, läder och dunjackor, etc.",
-    "CL_SL_CM_how_to_care_detail": "Lär dig hur du tar hand om olika typer av kläder som siden, ull, läder och dunjackor, etc.",
     "CL_SL_CM_articles": "artiklar",
     "CL_SL_CM_assistant_title": "Tvättbiträde",
     "CL_SL_CM_ai_wash_dry": "AI tvätta och torka",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Dessa program är baserade på dina dagliga vanor och frågeformulär.",
     "CL_SL_CM_redo_the_questionnaire": "GÖR OM FRÅGEFORMULÄRET",
     "CL_SL_CM_laundry_title": "Tvätt",
-    "CL_SL_CM_laundry_services_title": "Personlig tvättservice",
     "CL_SL_CM_laundry_services_detail": "Välkomna! Svara på följande frågor för att hjälpa oss att rekommendera bättre tvättprogram, vilket förbättrar din totala tvättupplevelse.",
     "CL_SL_CM_recommended_program_guide": "Rekommendera programguide",
     "CL_SL_CM_let's_get_started": "Låt oss komma igång!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Din enhet är offline",
     "CL_CF_AS_waiting": "väntan...",
     "CL_CF_CS_window_air_select_panel": "Välj den bild som matchar enhetens kontrollpanel.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Välj den kokzon eller de överbryggade zonerna du vill använda. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Välj den kokzon eller de överbryggade zonerna du vill använda. ",
+    "CL_CF_HP_Add_Automation": "Lägg till automatisering",
+    "CL_CF_HP_Add_Automation_tip": "Du kan lägga till de mest använda manuella rutinerna här",
+    "CL_CF_HP_Add_Home_Status": "Lägg till hemstatus",
+    "CL_CF_HP_Add_Home_Status_tip": "Du kan lägga till de mest använda enhetskorten här",
+    "CL_CF_HP_Add_Things_To_Do": "Lägg till saker att göra",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Du kan lägga till de mest använda widgetarna här",
+    "CL_CF_HP_Add_Discover": "Lägg till Discover",
+    "CL_CF_HP_Add_Discover_tip": "Du kan lägga till de mest använda tipsen här",
+    "CL_CF_HP_no_device_tip": "Anslut dina enheter",
+    "CL_CF_AS_check_devices": "Kontrollera status för din enhet.",
+    "CL_CF_AS_scan": "AVSÖKA",
+    "CL_CF_HP_device_skip_tips": "Du kan gå tillbaka till den gamla versionens hemsida genom att hitta inställningen för startfliken vid anpassa utseende på menysidan",
+    "CL_CF_HP_reset_card_tips": "Är du säker på att du vill återställa till de ursprungliga standardinställningarna?",
+    "CL_SL_CM_laundry_services_title": "Anpassa din tvätt",
+    "CL_SL_CM_usage_month": "Månatlig användning",
+    "CL_SL_CM_how_to_wash_detail": "Hjälper dig att tvätta olika typer av kläder som siden, ull, läder och dunjackor, etc.",
+    "CL_SL_CM_how_to_care_detail": "Hjälper dig att ta hand om olika typer av kläder som siden, ull, läder och dunjackor etc.",
+    "CL_SL_CM_drum_cleaning_about_detail": "En tvättmaskins trumrengöringsfunktion är en självrengörande cykel utformad för att ta bort mögel eller andra bakterier som sannolikt har byggts upp inuti trumman genom allmän användning.",
+    "CL_SL_CM_drum_clean_wash_cycles": "tvättcykler",
+    "CL_SL_CM_drum_clean_recommended_cycles": "rekommenderas trumrengöring efter 45 tvättar, du kan ställa in den på enhetssidan",
+    "CL_SL_CM_progam_send_warning2": "Tyvärr kan programmet inte skicka, vänligen slå på din enhet.",
+    "CL_SL_CM_energy_monitor": "GÅ TILL ENERGIMONITOR",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Namn som D**CW, som D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
