--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "ไปที่ส่วนเสริม",
     "CL_SL_CM_visualization": "การสร้างภาพ",
     "CL_SL_CM_laundry_usage_report": "รายงานการใช้ผ้าซัก",
-    "CL_SL_CM_usage_month": "การใช้ของเดือน",
     "CL_SL_CM_about_usage_month": "เกี่ยวกับการใช้ของเดือน",
     "CL_SL_CM_about_usage_month_detail": "ข้อมูลที่แสดงนั้นเป็นค่าประมาณ ไม่ใช่การวัดที่แน่นอน การประมาณของเราขึ้นอยู่กับการทดสอบที่มีการควบคุม ดังนั้นผลลัพธ์จริงของคุณอาจแตกต่างกันไป การใช้พลังงานในโลกแห่งความเป็นจริงขึ้นอยู่กับสภาพแวดล้อมและนิสัยเฉพาะของคุณ",
-    "CL_SL_CM_drum_cleaning_title": "การทำความสะอาดกลอง",
     "CL_SL_CM_drum_cleaning_great_job": "ถังซักสะอาด และคุณทำได้ดีมาก!",
     "CL_SL_CM_drum_cleaning_warning": "ได้รับการซักไปหลายครั้งนับตั้งแต่การทำความสะอาดถังครั้งสุดท้าย และแนะนำให้ใช้เพื่อทำให้เครื่องซักผ้าสะอาดขึ้น",
     "CL_SL_CM_drum_cleaning_about": "เกี่ยวกับการทำความสะอาดกลอง",
-    "CL_SL_CM_drum_cleaning_about_detail": "ฟังก์ชันทำความสะอาดถังซักของเครื่องซักผ้าเป็นรอบการทำความสะอาดตัวเองที่ออกแบบมาเพื่อขจัดเชื้อราหรือแบคทีเรียอื่นๆ ที่อาจสะสมอยู่ภายในถังซักจากการใช้งานทั่วไป เราขอแนะนำให้คุณทำความสะอาดถังซักหลังจากซักผ้าไปแล้ว 30 รอบ",
     "CL_SL_CM_data_statistics": "สถิติข้อมูล",
     "CL_SL_CM_data_statistics_about": "เกี่ยวกับสถิติข้อมูล",
     "CL_SL_CM_data_statistics_about_detail": "“อื่นๆ” คือผลรวมของสิ่งที่ใช้กันน้อยกว่า",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "ห้องสมุดซักรีด",
     "CL_SL_CM_how_to_wash": "วิธีการซัก",
     "CL_SL_CM_how_to_care": "วิธีการดูแลรักษา",
-    "CL_SL_CM_how_to_wash_detail": "สอนวิธีการซักเสื้อผ้าประเภทต่างๆ เช่น ผ้าไหม ผ้าขนสัตว์ หนัง และเสื้อแจ็กเก็ตขนเป็ด เป็นต้น",
-    "CL_SL_CM_how_to_care_detail": "สอนวิธีดูแลรักษาเสื้อผ้าประเภทต่างๆ เช่น ผ้าไหม ผ้าขนสัตว์ หนัง และเสื้อแจ็กเก็ตขนเป็ด เป็นต้น",
     "CL_SL_CM_articles": "บทความ",
     "CL_SL_CM_assistant_title": "ผู้ช่วยซักรีด",
     "CL_SL_CM_ai_wash_dry": "ระบบ AI Wash & Dry",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "โปรแกรมเหล่านี้จะขึ้นอยู่กับนิสัยและแบบสอบถามประจำวันของคุณ",
     "CL_SL_CM_redo_the_questionnaire": "ทำแบบสอบถามใหม่",
     "CL_SL_CM_laundry_title": "ซักรีด",
-    "CL_SL_CM_laundry_services_title": "บริการซักรีดเฉพาะบุคคล",
     "CL_SL_CM_laundry_services_detail": "ยินดีต้อนรับ! โปรดตอบคำถามต่อไปนี้เพื่อช่วยเราในการแนะนำโปรแกรมซักผ้าที่ดีกว่า เพื่อปรับปรุงประสบการณ์การซักผ้าโดยรวมของคุณ",
     "CL_SL_CM_recommended_program_guide": "แนะนำโปรแกรมแนะนำ",
     "CL_SL_CM_let's_get_started": "มาเริ่มกันเลย!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "อุปกรณ์ของคุณออฟไลน์",
     "CL_CF_AS_waiting": "ซึ่งรอคอย...",
     "CL_CF_CS_window_air_select_panel": "เลือกภาพที่ตรงกับแผงควบคุมของเครื่องของคุณ",
-    "CL_DV_HOB_program_zone_bridge_step2": "เลือกโซนการปรุงอาหารหรือโซนสะพานเชื่อมที่คุณต้องการใช้ "
+    "CL_DV_HOB_program_zone_bridge_step2": "เลือกโซนการปรุงอาหารหรือโซนสะพานเชื่อมที่คุณต้องการใช้ ",
+    "CL_CF_HP_Add_Automation": "เพิ่มการทำงานอัตโนมัติ",
+    "CL_CF_HP_Add_Automation_tip": "คุณสามารถเพิ่มกิจวัตรประจำวันที่ใช้บ่อยที่สุดได้ที่นี่",
+    "CL_CF_HP_Add_Home_Status": "เพิ่มสถานะบ้าน",
+    "CL_CF_HP_Add_Home_Status_tip": "คุณสามารถเพิ่มการ์ดอุปกรณ์ที่ใช้บ่อยที่สุดได้ที่นี่",
+    "CL_CF_HP_Add_Things_To_Do": "เพิ่มสิ่งที่ต้องทำ",
+    "CL_CF_HP_Add_Things_To_Do_tip": "คุณสามารถเพิ่มวิดเจ็ตที่ใช้บ่อยที่สุดได้ที่นี่",
+    "CL_CF_HP_Add_Discover": "เพิ่มการค้นพบ",
+    "CL_CF_HP_Add_Discover_tip": "คุณสามารถเพิ่มเคล็ดลับที่ใช้บ่อยที่สุดได้ที่นี่",
+    "CL_CF_HP_no_device_tip": "เชื่อมต่ออุปกรณ์ของคุณ",
+    "CL_CF_AS_check_devices": "ตรวจสอบสถานะของอุปกรณ์ของคุณ",
+    "CL_CF_AS_scan": "สแกน",
+    "CL_CF_HP_device_skip_tips": "คุณสามารถกลับไปยังหน้าแรกเวอร์ชันเก่าได้โดยค้นหาการตั้งค่าแท็บหน้าแรกที่ปรับแต่งลักษณะที่ปรากฏบนหน้าเมนู",
+    "CL_CF_HP_reset_card_tips": "คุณแน่ใจว่าต้องการรีเซ็ตเป็นการตั้งค่าเริ่มต้นใช่ไหม?",
+    "CL_SL_CM_laundry_services_title": "ปรับแต่งการซักรีดของคุณ",
+    "CL_SL_CM_usage_month": "การใช้งานรายเดือน",
+    "CL_SL_CM_how_to_wash_detail": "ช่วยคุณวิธีการซักเสื้อผ้าประเภทต่างๆ เช่น ผ้าไหม ผ้าขนสัตว์ หนัง และเสื้อแจ็กเก็ตขนเป็ด เป็นต้น",
+    "CL_SL_CM_how_to_care_detail": "ช่วยคุณวิธีการดูแลเสื้อผ้าประเภทต่างๆ เช่น ผ้าไหม ผ้าขนสัตว์ หนัง และแจ็กเก็ตขนเป็ด เป็นต้น",
+    "CL_SL_CM_drum_cleaning_about_detail": "ฟังก์ชันทำความสะอาดถังซักของเครื่องซักผ้าเป็นรอบการทำความสะอาดตัวเองที่ออกแบบมาเพื่อขจัดเชื้อราหรือแบคทีเรียอื่นๆ ที่อาจสะสมอยู่ภายในถังซักจากการใช้งานทั่วไป",
+    "CL_SL_CM_drum_clean_wash_cycles": "รอบการซัก",
+    "CL_SL_CM_drum_clean_recommended_cycles": "แนะนำให้ทำความสะอาดถังซักหลังซัก 45 ครั้ง โดยสามารถตั้งค่าได้ในหน้าอุปกรณ์",
+    "CL_SL_CM_progam_send_warning2": "ขออภัยโปรแกรมไม่สามารถส่งได้ กรุณาเปิดอุปกรณ์ของคุณ",
+    "CL_SL_CM_energy_monitor": "ไปที่ตัวตรวจสอบพลังงาน",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "ชื่อ D**CW เช่น D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
