--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Перейти до додаткових",
     "CL_SL_CM_visualization": "Візуалізація",
     "CL_SL_CM_laundry_usage_report": "Звіт про використання пральні",
-    "CL_SL_CM_usage_month": "Використання місяця",
     "CL_SL_CM_about_usage_month": "Про використання місяця",
     "CL_SL_CM_about_usage_month_detail": "Показані дані є приблизними, а не точними вимірюваннями. Наші оцінки базуються на контрольованих тестах, тому ваші фактичні результати можуть відрізнятися. Реальне споживання енергії залежить від вашого конкретного середовища та звичок.",
-    "CL_SL_CM_drum_cleaning_title": "Очищення барабана",
     "CL_SL_CM_drum_cleaning_great_job": "Барабан пральної машини чистий, і ви зробили чудову роботу!",
     "CL_SL_CM_drum_cleaning_warning": "Його багато разів прали з моменту останнього чищення барабана, тому його рекомендується використовувати для очищення білизни.",
     "CL_SL_CM_drum_cleaning_about": "Про очищення барабана",
-    "CL_SL_CM_drum_cleaning_about_detail": "Функція очищення барабана пральної машини – це цикл самоочищення, призначений для видалення цвілі чи інших бактерій, які, імовірно, накопичилися всередині барабана під час звичайного використання. Ми рекомендуємо виконувати очищення барабана після 30 циклів прання.",
     "CL_SL_CM_data_statistics": "Статистика даних",
     "CL_SL_CM_data_statistics_about": "Про статистику даних",
     "CL_SL_CM_data_statistics_about_detail": "«Інші» — це сума менш використовуваних.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Бібліотека пральні",
     "CL_SL_CM_how_to_wash": "Як прати",
     "CL_SL_CM_how_to_care": "Як доглядати",
-    "CL_SL_CM_how_to_wash_detail": "Навчить вас прати різні типи одягу, такі як шовк, вовна, шкіра, пуховики тощо.",
-    "CL_SL_CM_how_to_care_detail": "Навчить вас доглядати за різними видами одягу, такими як шовк, вовна, шкіра, пуховики тощо.",
     "CL_SL_CM_articles": "статті",
     "CL_SL_CM_assistant_title": "Помічник пральні",
     "CL_SL_CM_ai_wash_dry": "AI Wash & Dry",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Ці програми базуються на ваших щоденних звичках і анкетах.",
     "CL_SL_CM_redo_the_questionnaire": "ПЕРЕКОЛИТИ АНКЕТУ",
     "CL_SL_CM_laundry_title": "Пральня",
-    "CL_SL_CM_laundry_services_title": "Індивідуальні послуги пральні",
     "CL_SL_CM_laundry_services_detail": "Ласкаво просимо! Дайте відповіді на наступні запитання, щоб допомогти нам рекомендувати кращі програми прання, покращуючи загальний досвід прання.",
     "CL_SL_CM_recommended_program_guide": "Рекомендуйте телегід",
     "CL_SL_CM_let's_get_started": "Давайте почнемо!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Ваш пристрій офлайн",
     "CL_CF_AS_waiting": "чекаю...",
     "CL_CF_CS_window_air_select_panel": "Виберіть зображення, яке відповідає панелі керування вашого пристрою.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Виберіть зону нагрівання або зони, які ви хочете використовувати. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Виберіть зону нагрівання або зони, які ви хочете використовувати. ",
+    "CL_CF_HP_Add_Automation": "Додати автоматизацію",
+    "CL_CF_HP_Add_Automation_tip": "Тут ви можете додати найбільш використовувані ручні процедури",
+    "CL_CF_HP_Add_Home_Status": "Додайте домашній статус",
+    "CL_CF_HP_Add_Home_Status_tip": "Тут можна додати карти пристроїв, які найчастіше використовуються",
+    "CL_CF_HP_Add_Things_To_Do": "Додайте речі, які потрібно зробити",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Тут можна додати віджети, які найчастіше використовуються",
+    "CL_CF_HP_Add_Discover": "Додати Discover",
+    "CL_CF_HP_Add_Discover_tip": "Тут ви можете додати найбільш використовувані поради",
+    "CL_CF_HP_no_device_tip": "Підключіть свої пристрої",
+    "CL_CF_AS_check_devices": "Перевірте стан свого пристрою.",
+    "CL_CF_AS_scan": "СКАНУВАТИ",
+    "CL_CF_HP_device_skip_tips": "Ви можете повернутися до домашньої сторінки старої версії, знайшовши налаштування вкладки «Домашня сторінка» на сторінці налаштування зовнішнього вигляду на сторінці меню",
+    "CL_CF_HP_reset_card_tips": "Ви впевнені, що бажаєте скинути початкові налаштування за замовчуванням?",
+    "CL_SL_CM_laundry_services_title": "Персоналізуйте свою пральню",
+    "CL_SL_CM_usage_month": "Щомісячне використання",
+    "CL_SL_CM_how_to_wash_detail": "Допоможе вам прати різні типи одягу, такі як шовк, вовна, шкіра, пуховики тощо.",
+    "CL_SL_CM_how_to_care_detail": "Допоможе вам доглядати за різними типами одягу, такими як шовк, вовна, шкіра, пуховики тощо.",
+    "CL_SL_CM_drum_cleaning_about_detail": "Функція очищення барабана пральної машини – це цикл самоочищення, призначений для видалення цвілі чи інших бактерій, які, ймовірно, накопичилися всередині барабана під час звичайного використання.",
+    "CL_SL_CM_drum_clean_wash_cycles": "циклів прання",
+    "CL_SL_CM_drum_clean_recommended_cycles": "рекомендоване очищення барабана після 45 прань, ви можете встановити це на сторінці пристрою",
+    "CL_SL_CM_progam_send_warning2": "На жаль, програма не може надіслати, увімкніть пристрій.",
+    "CL_SL_CM_energy_monitor": "ПЕРЕЙТИ В ЕНЕРГОМОНІТОР",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Назвіть D**CW, наприклад D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
