--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Đi đến phần bổ sung",
     "CL_SL_CM_visualization": "Hình ảnh hóa",
     "CL_SL_CM_laundry_usage_report": "Báo cáo sử dụng đồ giặt",
-    "CL_SL_CM_usage_month": "Cách sử dụng của tháng",
     "CL_SL_CM_about_usage_month": "Về việc sử dụng tháng",
     "CL_SL_CM_about_usage_month_detail": "Dữ liệu hiển thị là ước tính, không phải là số đo chính xác. Ước tính của chúng tôi dựa trên các thử nghiệm được kiểm soát, do đó kết quả thực tế của bạn có thể khác. Mức sử dụng năng lượng thực tế phụ thuộc vào môi trường và thói quen cụ thể của bạn.",
-    "CL_SL_CM_drum_cleaning_title": "Vệ sinh trống",
     "CL_SL_CM_drum_cleaning_great_job": "Lồng máy giặt sạch sẽ và bạn đã làm rất tốt!",
     "CL_SL_CM_drum_cleaning_warning": "Máy đã được giặt nhiều lần kể từ lần vệ sinh lồng giặt cuối cùng và được khuyến khích sử dụng để làm chất tẩy rửa quần áo.",
     "CL_SL_CM_drum_cleaning_about": "Về việc vệ sinh trống",
-    "CL_SL_CM_drum_cleaning_about_detail": "Chức năng vệ sinh lồng giặt là chu trình tự làm sạch được thiết kế để loại bỏ nấm mốc hoặc các loại vi khuẩn khác có thể tích tụ bên trong lồng giặt trong quá trình sử dụng. Chúng tôi khuyên bạn nên vệ sinh lồng giặt sau 30 chu kỳ giặt.",
     "CL_SL_CM_data_statistics": "Thống kê dữ liệu",
     "CL_SL_CM_data_statistics_about": "Về thống kê dữ liệu",
     "CL_SL_CM_data_statistics_about_detail": "“Khác” là tổng hợp của những từ ít được sử dụng hơn.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Thư viện giặt là",
     "CL_SL_CM_how_to_wash": "Cách rửa",
     "CL_SL_CM_how_to_care": "Cách chăm sóc",
-    "CL_SL_CM_how_to_wash_detail": "Dạy bạn cách giặt các loại quần áo khác nhau như lụa, len, da, áo khoác lông vũ, v.v.",
-    "CL_SL_CM_how_to_care_detail": "Dạy bạn cách chăm sóc các loại trang phục khác nhau như lụa, len, da, áo khoác lông vũ, v.v.",
     "CL_SL_CM_articles": "bài viết",
     "CL_SL_CM_assistant_title": "Trợ lý giặt là",
     "CL_SL_CM_ai_wash_dry": "Giặt & Sấy AI",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Các chương trình này dựa trên thói quen hàng ngày và bảng câu hỏi của bạn.",
     "CL_SL_CM_redo_the_questionnaire": "LÀM LẠI BẢNG CÂU HỎI",
     "CL_SL_CM_laundry_title": "Giặt ủi",
-    "CL_SL_CM_laundry_services_title": "Dịch vụ giặt là cá nhân",
     "CL_SL_CM_laundry_services_detail": "Chào mừng! Trả lời các câu hỏi sau để giúp chúng tôi đề xuất các chương trình giặt ủi tốt hơn, nâng cao trải nghiệm giặt giũ tổng thể của bạn.",
     "CL_SL_CM_recommended_program_guide": "Đề xuất hướng dẫn chương trình",
     "CL_SL_CM_let's_get_started": "Chúng ta hãy bắt đầu nhé!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Thiết bị của bạn đang ngoại tuyến",
     "CL_CF_AS_waiting": "chờ...",
     "CL_CF_CS_window_air_select_panel": "Chọn hình ảnh phù hợp với bảng điều khiển của thiết bị.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Chọn vùng nấu hoặc vùng nấu liên kết mà bạn muốn sử dụng. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Chọn vùng nấu hoặc vùng nấu liên kết mà bạn muốn sử dụng. ",
+    "CL_CF_HP_Add_Automation": "Thêm Tự động hóa",
+    "CL_CF_HP_Add_Automation_tip": "Bạn có thể thêm các thói quen thủ công được sử dụng nhiều nhất ở đây",
+    "CL_CF_HP_Add_Home_Status": "Thêm trạng thái trang chủ",
+    "CL_CF_HP_Add_Home_Status_tip": "Bạn có thể thêm các thẻ thiết bị được sử dụng nhiều nhất tại đây",
+    "CL_CF_HP_Add_Things_To_Do": "Thêm việc cần làm",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Bạn có thể thêm các tiện ích được sử dụng nhiều nhất ở đây",
+    "CL_CF_HP_Add_Discover": "Thêm Khám phá",
+    "CL_CF_HP_Add_Discover_tip": "Bạn có thể thêm các mẹo được sử dụng nhiều nhất ở đây",
+    "CL_CF_HP_no_device_tip": "Kết nối các thiết bị của bạn",
+    "CL_CF_AS_check_devices": "Kiểm tra trạng thái thiết bị của bạn.",
+    "CL_CF_AS_scan": "QUÉT",
+    "CL_CF_HP_device_skip_tips": "Bạn có thể quay lại trang chủ phiên bản cũ bằng cách tìm cài đặt tab trang chủ tại tùy chỉnh giao diện trên trang menu",
+    "CL_CF_HP_reset_card_tips": "Bạn có chắc chắn muốn khôi phục cài đặt mặc định ban đầu không?",
+    "CL_SL_CM_laundry_services_title": "Cá nhân hóa việc giặt giũ của bạn",
+    "CL_SL_CM_usage_month": "Sử dụng hàng tháng",
+    "CL_SL_CM_how_to_wash_detail": "Giúp bạn cách giặt các loại quần áo khác nhau như lụa, len, da, áo khoác lông vũ, v.v.",
+    "CL_SL_CM_how_to_care_detail": "Giúp bạn cách chăm sóc các loại trang phục khác nhau như lụa, len, da, áo khoác lông vũ, v.v.",
+    "CL_SL_CM_drum_cleaning_about_detail": "Chức năng vệ sinh lồng giặt là chu trình tự làm sạch được thiết kế để loại bỏ nấm mốc hoặc các loại vi khuẩn khác có thể tích tụ bên trong lồng giặt trong quá trình sử dụng thông thường.",
+    "CL_SL_CM_drum_clean_wash_cycles": "chu kỳ giặt",
+    "CL_SL_CM_drum_clean_recommended_cycles": "khuyến nghị vệ sinh lồng giặt sau 45 lần giặt, bạn có thể cài đặt trong trang thiết bị",
+    "CL_SL_CM_progam_send_warning2": "Rất tiếc, chương trình không thể gửi, vui lòng bật thiết bị của bạn.",
+    "CL_SL_CM_energy_monitor": "ĐẾN MÀN HÌNH NĂNG LƯỢNG",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Đặt tên là D**CW, như D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
