--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "前往額外內容",
     "CL_SL_CM_visualization": "視覺化",
     "CL_SL_CM_laundry_usage_report": "洗衣使用報告",
-    "CL_SL_CM_usage_month": "當月使用情況",
     "CL_SL_CM_about_usage_month": "關於當月使用情況",
     "CL_SL_CM_about_usage_month_detail": "顯示的數據為估計值，並非精確測量值。",
-    "CL_SL_CM_drum_cleaning_title": "滾筒清潔",
     "CL_SL_CM_drum_cleaning_great_job": "洗衣機滾筒很乾淨，你做得很好！",
     "CL_SL_CM_drum_cleaning_warning": "自從上次滾筒清洗以來已經洗過很多次了，建議用它來製作洗衣清潔劑。",
     "CL_SL_CM_drum_cleaning_about": "關於滾筒清潔",
-    "CL_SL_CM_drum_cleaning_about_detail": "洗衣機滾筒清潔功能是一種自清潔循環，旨在去除一般使用過程中可能在滾筒內積聚的黴菌或其他細菌。",
     "CL_SL_CM_data_statistics": "數據統計",
     "CL_SL_CM_data_statistics_about": "關於數據統計",
     "CL_SL_CM_data_statistics_about_detail": "「其他」是較少使用的總和。",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "洗衣庫",
     "CL_SL_CM_how_to_wash": "如何清洗",
     "CL_SL_CM_how_to_care": "如何護理",
-    "CL_SL_CM_how_to_wash_detail": "教你如何洗滌絲綢、羊毛、皮革、羽絨外套等不同類型的衣服。",
-    "CL_SL_CM_how_to_care_detail": "教您如何照顧絲綢、羊毛、皮革、羽絨外套等不同類型的衣物。",
     "CL_SL_CM_articles": "文章",
     "CL_SL_CM_assistant_title": "洗衣助理",
     "CL_SL_CM_ai_wash_dry": "人工智慧洗烘乾",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "這些計劃是基於您的日常習慣和問卷。",
     "CL_SL_CM_redo_the_questionnaire": "重做問卷",
     "CL_SL_CM_laundry_title": "洗衣店",
-    "CL_SL_CM_laundry_services_title": "個人化洗衣服務",
     "CL_SL_CM_laundry_services_detail": "歡迎！回答以下問題可協助我們推薦更好的洗衣計劃，增強您的整體洗衣體驗。",
     "CL_SL_CM_recommended_program_guide": "推薦節目指南",
     "CL_SL_CM_let's_get_started": "讓我們開始吧！",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "您的設備處於離線狀態",
     "CL_CF_AS_waiting": "等待...",
     "CL_CF_CS_window_air_select_panel": "選擇與您裝置的控制面板相符的影像。",
-    "CL_DV_HOB_program_zone_bridge_step2": "選擇您要使用的烹飪區域或橋接區域。 "
+    "CL_DV_HOB_program_zone_bridge_step2": "選擇您要使用的烹飪區域或橋接區域。 ",
+    "CL_CF_HP_Add_Automation": "新增自動化",
+    "CL_CF_HP_Add_Automation_tip": "您可以在此處新增最常用的手動例程",
+    "CL_CF_HP_Add_Home_Status": "新增家庭狀態",
+    "CL_CF_HP_Add_Home_Status_tip": "您可以在此處新增最常用的設備卡",
+    "CL_CF_HP_Add_Things_To_Do": "新增待辦事項",
+    "CL_CF_HP_Add_Things_To_Do_tip": "您可以在此處添加最常用的小部件",
+    "CL_CF_HP_Add_Discover": "添加發現",
+    "CL_CF_HP_Add_Discover_tip": "您可以在此處新增最常用的提示",
+    "CL_CF_HP_no_device_tip": "連接您的裝置",
+    "CL_CF_AS_check_devices": "請確認家電的狀態",
+    "CL_CF_AS_scan": "掃描",
+    "CL_CF_HP_device_skip_tips": "您可以透過選單頁面自訂外觀找到主頁選項卡設定返回舊版本主頁",
+    "CL_CF_HP_reset_card_tips": "您確定要重設為初始預設值嗎？",
+    "CL_SL_CM_laundry_services_title": "個人化您的洗衣服務",
+    "CL_SL_CM_usage_month": "每月使用量",
+    "CL_SL_CM_how_to_wash_detail": "幫助您如何洗滌絲綢、羊毛、皮革、羽絨外套等不同類型的衣服。",
+    "CL_SL_CM_how_to_care_detail": "幫助您如何照顧不同類型的衣物，如絲綢、羊毛、皮革、羽絨外套等。",
+    "CL_SL_CM_drum_cleaning_about_detail": "洗衣機滾筒清潔功能是一種自清潔循環，旨在去除一般使用過程中可能在滾筒內積聚的黴菌或其他細菌。",
+    "CL_SL_CM_drum_clean_wash_cycles": "洗衣週期",
+    "CL_SL_CM_drum_clean_recommended_cycles": "建議清洗45次後滾筒清潔，可以在設備頁面設置",
+    "CL_SL_CM_progam_send_warning2": "抱歉，程式無法傳送，請開啟您的裝置。",
+    "CL_SL_CM_energy_monitor": "轉到能源監控器",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "名稱為D**CW，如D12CW、D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
