--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "前往额外内容",
     "CL_SL_CM_visualization": "可视化",
     "CL_SL_CM_laundry_usage_report": "洗衣使用报告",
-    "CL_SL_CM_usage_month": "本月使用情况",
     "CL_SL_CM_about_usage_month": "关于当月使用情况",
     "CL_SL_CM_about_usage_month_detail": "显示的数据是估计值，而不是精确测量值。我们的估计值基于受控测试，因此您的实际结果可能会有所不同。实际的能源使用情况取决于您的特定环境和习惯。",
-    "CL_SL_CM_drum_cleaning_title": "滚筒清洁",
     "CL_SL_CM_drum_cleaning_great_job": "洗衣机滚筒很干净，你做得很好！",
     "CL_SL_CM_drum_cleaning_warning": "自上次滚筒清洗以来已洗过多次，建议使用，可以使衣物更干净。",
     "CL_SL_CM_drum_cleaning_about": "关于鼓清洁",
-    "CL_SL_CM_drum_cleaning_about_detail": "洗衣机滚筒清洁功能是一种自清洁循环，旨在去除在日常使用过程中可能在滚筒内积聚的霉菌或其他细菌。我们建议您在 30 次洗衣循环后进行一次滚筒清洁。",
     "CL_SL_CM_data_statistics": "数据统计",
     "CL_SL_CM_data_statistics_about": "关于数据统计",
     "CL_SL_CM_data_statistics_about_detail": "“其他”是较少使用的部分的总和。",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "洗衣库",
     "CL_SL_CM_how_to_wash": "如何清洗",
     "CL_SL_CM_how_to_care": "如何护理",
-    "CL_SL_CM_how_to_wash_detail": "教您如何清洗不同类型的衣物，如丝绸、羊毛、皮革、羽绒服等。",
-    "CL_SL_CM_how_to_care_detail": "教您如何护理不同类型的服装，如丝绸、羊毛、皮革和羽绒服等。",
     "CL_SL_CM_articles": "文章",
     "CL_SL_CM_assistant_title": "洗衣助理",
     "CL_SL_CM_ai_wash_dry": "人工智能洗涤和烘干",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "这些程序基于您的日常习惯和问卷调查。",
     "CL_SL_CM_redo_the_questionnaire": "重新做问卷",
     "CL_SL_CM_laundry_title": "洗衣店",
-    "CL_SL_CM_laundry_services_title": "个性化洗衣服务",
     "CL_SL_CM_laundry_services_detail": "欢迎！回答以下问题可帮助我们推荐更好的洗衣方案，提升您的整体洗衣体验。",
     "CL_SL_CM_recommended_program_guide": "推荐节目指南",
     "CL_SL_CM_let's_get_started": "让我们开始吧！",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "您的设备处于离线状态",
     "CL_CF_AS_waiting": "等待...",
     "CL_CF_CS_window_air_select_panel": "选择与您的设备控制面板相匹配的图像。",
-    "CL_DV_HOB_program_zone_bridge_step2": "选择您想要使用的烹饪区或桥接区。 "
+    "CL_DV_HOB_program_zone_bridge_step2": "选择您想要使用的烹饪区或桥接区。 ",
+    "CL_CF_HP_Add_Automation": "添加自动化",
+    "CL_CF_HP_Add_Automation_tip": "您可以在此处添加最常用的手动例程",
+    "CL_CF_HP_Add_Home_Status": "添加家庭状态",
+    "CL_CF_HP_Add_Home_Status_tip": "您可以在此处添加最常用的设备卡",
+    "CL_CF_HP_Add_Things_To_Do": "添加要做的事情",
+    "CL_CF_HP_Add_Things_To_Do_tip": "您可以在此处添加最常用的小部件",
+    "CL_CF_HP_Add_Discover": "添加发现",
+    "CL_CF_HP_Add_Discover_tip": "您可以在此处添加最常用的提示",
+    "CL_CF_HP_no_device_tip": "连接您的设备",
+    "CL_CF_AS_check_devices": "请确认家电的状态",
+    "CL_CF_AS_scan": "扫描",
+    "CL_CF_HP_device_skip_tips": "您可以通过菜单页面的自定义外观中的主页标签设置返回旧版本主页",
+    "CL_CF_HP_reset_card_tips": "您确定要重置为初始默认设置吗？",
+    "CL_SL_CM_laundry_services_title": "个性化您的洗衣服务",
+    "CL_SL_CM_usage_month": "每月使用量",
+    "CL_SL_CM_how_to_wash_detail": "帮助您如何清洗不同类型的衣物，如丝绸、羊毛、皮革和羽绒服等。",
+    "CL_SL_CM_how_to_care_detail": "帮助您如何护理不同类型的服装，如丝绸、羊毛、皮革和羽绒服等。",
+    "CL_SL_CM_drum_cleaning_about_detail": "洗衣机滚筒清洁功能是一种自清洁循环，旨在去除在日常使用过程中可能在滚筒内积聚的霉菌或其他细菌。",
+    "CL_SL_CM_drum_clean_wash_cycles": "洗涤周期",
+    "CL_SL_CM_drum_clean_recommended_cycles": "建议在 45 次洗涤后清洁滚筒，您可以在设备页面中进行设置",
+    "CL_SL_CM_progam_send_warning2": "抱歉，程序无法发送，请打开您的设备。",
+    "CL_SL_CM_energy_monitor": "进入能源监测",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "命名为 D**CW，例如 D12CW、D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
