--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "अतिरिक्त पर जाएँ",
     "CL_SL_CM_visualization": "VISUALIZATION",
     "CL_SL_CM_laundry_usage_report": "कपड़े धोने की उपयोग रिपोर्ट",
-    "CL_SL_CM_usage_month": "महीने का उपयोग",
     "CL_SL_CM_about_usage_month": "महीने के उपयोग के बारे में",
     "CL_SL_CM_about_usage_month_detail": "दिखाए गए आंकड़े अनुमान हैं, सटीक माप नहीं। हमारे अनुमान नियंत्रित परीक्षणों पर आधारित हैं, इसलिए आपके वास्तविक परिणाम भिन्न हो सकते हैं। वास्तविक दुनिया में ऊर्जा का उपयोग आपके विशिष्ट वातावरण और आदतों पर निर्भर करता है।",
-    "CL_SL_CM_drum_cleaning_title": "ड्रम की सफाई",
     "CL_SL_CM_drum_cleaning_great_job": "वॉशर ड्रम साफ है और आपने बहुत अच्छा काम किया!",
     "CL_SL_CM_drum_cleaning_warning": "पिछली बार ड्रम की सफाई के बाद से इसे कई बार धोया गया है, और कपड़े धोने को साफ करने के लिए इसका उपयोग करने की सिफारिश की जाती है।",
     "CL_SL_CM_drum_cleaning_about": "ड्रम की सफाई के बारे में",
-    "CL_SL_CM_drum_cleaning_about_detail": "वॉशिंग मशीन ड्रम क्लीन फंक्शन एक स्व-सफाई चक्र है जिसे मोल्ड या अन्य बैक्टीरिया को हटाने के लिए डिज़ाइन किया गया है जो सामान्य उपयोग के माध्यम से ड्रम के अंदर जमा हो सकते हैं। हम अनुशंसा करते हैं कि आप 30 कपड़े धोने के चक्रों के बाद ड्रम की सफाई करें।",
     "CL_SL_CM_data_statistics": "डेटा सांख्यिकी",
     "CL_SL_CM_data_statistics_about": "डेटा सांख्यिकी के बारे में",
     "CL_SL_CM_data_statistics_about_detail": "\"अन्य\" कम इस्तेमाल किए जाने वाले शब्दों का योग है।",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "कपड़े धोने का पुस्तकालय",
     "CL_SL_CM_how_to_wash": "कैसे धोएं?",
     "CL_SL_CM_how_to_care": "देखभाल कैसे करें?",
-    "CL_SL_CM_how_to_wash_detail": "आपको विभिन्न प्रकार के कपड़े जैसे रेशम, ऊनी, चमड़े और डाउन जैकेट आदि को धोना सिखाएगा।",
-    "CL_SL_CM_how_to_care_detail": "आपको विभिन्न प्रकार के कपड़ों जैसे रेशम, ऊनी, चमड़े और डाउन जैकेट आदि की देखभाल करना सिखाएगा।",
     "CL_SL_CM_articles": "सामग्री",
     "CL_SL_CM_assistant_title": "कपड़े धोने का सहायक",
     "CL_SL_CM_ai_wash_dry": "एआई वॉश और ड्राई",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "ये कार्यक्रम आपकी दैनिक आदतों और प्रश्नावली पर आधारित हैं।",
     "CL_SL_CM_redo_the_questionnaire": "प्रश्नावली को दोबारा लिखें",
     "CL_SL_CM_laundry_title": "धोने लायक कपड़े",
-    "CL_SL_CM_laundry_services_title": "व्यक्तिगत कपड़े धोने की सेवाएं",
     "CL_SL_CM_laundry_services_detail": "आपका स्वागत है! बेहतर कपड़े धोने के कार्यक्रमों की सिफारिश करने में हमारी सहायता करने के लिए निम्नलिखित प्रश्नों के उत्तर दें, जिससे आपके समग्र कपड़े धोने के अनुभव में वृद्धि होगी।",
     "CL_SL_CM_recommended_program_guide": "अनुशंसित कार्यक्रम मार्गदर्शिका",
     "CL_SL_CM_let's_get_started": "आएँ शुरू करें!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "आपका डिवाइस ऑफ़लाइन है",
     "CL_CF_AS_waiting": "इंतज़ार में...",
     "CL_CF_CS_window_air_select_panel": "अपनी यूनिट के नियंत्रण पैनल से मेल खाने वाली छवि का चयन करें।",
-    "CL_DV_HOB_program_zone_bridge_step2": "उस कुकिंग जोन या ब्रिज्ड जोन का चयन करें जिसका आप उपयोग करना चाहते हैं। "
+    "CL_DV_HOB_program_zone_bridge_step2": "उस कुकिंग जोन या ब्रिज्ड जोन का चयन करें जिसका आप उपयोग करना चाहते हैं। ",
+    "CL_CF_HP_Add_Automation": "स्वचालन जोड़ें",
+    "CL_CF_HP_Add_Automation_tip": "आप यहां सबसे अधिक उपयोग किए जाने वाले मैनुअल रूटीन जोड़ सकते हैं",
+    "CL_CF_HP_Add_Home_Status": "होम स्थिति जोड़ें",
+    "CL_CF_HP_Add_Home_Status_tip": "आप यहां सबसे अधिक उपयोग किए जाने वाले डिवाइस कार्ड जोड़ सकते हैं",
+    "CL_CF_HP_Add_Things_To_Do": "करने के लिए चीज़ें जोड़ें",
+    "CL_CF_HP_Add_Things_To_Do_tip": "आप यहां सबसे अधिक उपयोग किए जाने वाले विजेट जोड़ सकते हैं",
+    "CL_CF_HP_Add_Discover": "डिस्कवर जोड़ें",
+    "CL_CF_HP_Add_Discover_tip": "आप सबसे अधिक उपयोग की जाने वाली युक्तियाँ यहाँ जोड़ सकते हैं",
+    "CL_CF_HP_no_device_tip": "अपने डिवाइस कनेक्ट करें",
+    "CL_CF_AS_check_devices": "अपने डिवाइस की स्थिति जांचें।",
+    "CL_CF_AS_scan": "स्कैन",
+    "CL_CF_HP_device_skip_tips": "आप मेनू पृष्ठ पर उपस्थिति को अनुकूलित करने के लिए होम टैब सेटिंग ढूंढकर पुराने संस्करण के होमपेज पर वापस जा सकते हैं",
+    "CL_CF_HP_reset_card_tips": "क्या आप वाकई प्रारंभिक डिफ़ॉल्ट सेटिंग्स पर रीसेट करना चाहते हैं?",
+    "CL_SL_CM_laundry_services_title": "अपने कपड़े धोने की सुविधा को व्यक्तिगत बनाएँ",
+    "CL_SL_CM_usage_month": "मासिक उपयोग",
+    "CL_SL_CM_how_to_wash_detail": "आपको विभिन्न प्रकार के कपड़े जैसे रेशम, ऊनी, चमड़े और डाउन जैकेट आदि को धोने में मदद मिलेगी।",
+    "CL_SL_CM_how_to_care_detail": "आपको विभिन्न प्रकार के कपड़ों जैसे रेशम, ऊनी, चमड़े और डाउन जैकेट आदि की देखभाल करने में मदद मिलेगी।",
+    "CL_SL_CM_drum_cleaning_about_detail": "वॉशिंग मशीन ड्रम क्लीन फंक्शन एक स्व-सफाई चक्र है, जिसे सामान्य उपयोग के दौरान ड्रम के अंदर जमा हो जाने वाले फफूंद या अन्य बैक्टीरिया को हटाने के लिए डिज़ाइन किया गया है।",
+    "CL_SL_CM_drum_clean_wash_cycles": "धुलाई चक्र",
+    "CL_SL_CM_drum_clean_recommended_cycles": "45 धुलाई के बाद ड्रम साफ करने की सिफारिश की गई है, आप इसे डिवाइस पेज में सेट कर सकते हैं",
+    "CL_SL_CM_progam_send_warning2": "क्षमा करें, प्रोग्राम नहीं भेजा जा सकता, कृपया अपना डिवाइस चालू करें।",
+    "CL_SL_CM_energy_monitor": "एनर्जी मॉनिटर पर जाएं",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "नाम D**CW, जैसे D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
