--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -4394,14 +4394,11 @@
     "CL_DV_OV_go_to_extra": "Idi na dodatke",
     "CL_SL_CM_visualization": "Vizualizacija",
     "CL_SL_CM_laundry_usage_report": "Izvješće o korištenju rublja",
-    "CL_SL_CM_usage_month": "Upotreba mjeseca",
     "CL_SL_CM_about_usage_month": "O korištenju mjeseca",
     "CL_SL_CM_about_usage_month_detail": "Prikazani podaci su procjene, a ne točna mjerenja. Naše procjene temelje se na kontroliranim testovima, tako da vaši stvarni rezultati mogu varirati. Potrošnja energije u stvarnom svijetu ovisi o vašem specifičnom okruženju i navikama.",
-    "CL_SL_CM_drum_cleaning_title": "Čišćenje bubnja",
     "CL_SL_CM_drum_cleaning_great_job": "Bubanj perilice je čist i napravili ste sjajan posao!",
     "CL_SL_CM_drum_cleaning_warning": "Od zadnjeg pranja bubnja je mnogo puta opran te se preporuča koristiti za čišćenje rublja.",
     "CL_SL_CM_drum_cleaning_about": "O čišćenju bubnja",
-    "CL_SL_CM_drum_cleaning_about_detail": "Funkcija čišćenja bubnja perilice je ciklus samočišćenja dizajniran za uklanjanje plijesni ili drugih bakterija koje su se vjerojatno nakupile unutar bubnja tijekom opće uporabe. Preporučujemo da obavite čišćenje bubnja nakon 30 ciklusa pranja rublja.",
     "CL_SL_CM_data_statistics": "Statistika podataka",
     "CL_SL_CM_data_statistics_about": "O statistici podataka",
     "CL_SL_CM_data_statistics_about_detail": "\"Ostalo\" je zbroj manje korištenih.",
@@ -4416,8 +4413,6 @@
     "CL_SL_CM_library_title": "Knjižnica za pranje rublja",
     "CL_SL_CM_how_to_wash": "Kako oprati",
     "CL_SL_CM_how_to_care": "Kako se brinuti",
-    "CL_SL_CM_how_to_wash_detail": "Nauči vas kako prati različite vrste odjeće poput svile, vune, kože, jakni i perjanica itd.",
-    "CL_SL_CM_how_to_care_detail": "Nauči vas kako se brinuti za različite vrste odjeće poput svile, vune, kože, jakni i perjanica itd.",
     "CL_SL_CM_articles": "članci",
     "CL_SL_CM_assistant_title": "Pomoćnik u praonici rublja",
     "CL_SL_CM_ai_wash_dry": "AI pranje i sušenje",
@@ -4426,7 +4421,6 @@
     "CL_SL_CM_recommended_about_detail": "Ovi programi temelje se na vašim svakodnevnim navikama i upitnicima.",
     "CL_SL_CM_redo_the_questionnaire": "PONOVI UPITNIK",
     "CL_SL_CM_laundry_title": "Praonica",
-    "CL_SL_CM_laundry_services_title": "Personalizirane usluge pranja rublja",
     "CL_SL_CM_laundry_services_detail": "Dobrodošli! Odgovorite na sljedeća pitanja kako biste nam pomogli u preporučivanju boljih programa pranja rublja, poboljšavajući vaše cjelokupno iskustvo pranja rublja.",
     "CL_SL_CM_recommended_program_guide": "Preporuka programskog vodiča",
     "CL_SL_CM_let's_get_started": "Započnimo!",
@@ -4641,5 +4635,30 @@
     "CL_CF_AS_your_device_offline": "Vaš uređaj je izvan mreže",
     "CL_CF_AS_waiting": "čekanje...",
     "CL_CF_CS_window_air_select_panel": "Odaberite sliku koja odgovara upravljačkoj ploči vaše jedinice.",
-    "CL_DV_HOB_program_zone_bridge_step2": "Odaberite polje za kuhanje ili premoštene zone koje želite koristiti. "
+    "CL_DV_HOB_program_zone_bridge_step2": "Odaberite polje za kuhanje ili premoštene zone koje želite koristiti. ",
+    "CL_CF_HP_Add_Automation": "Dodaj automatizaciju",
+    "CL_CF_HP_Add_Automation_tip": "Ovdje možete dodati najčešće korištene ručne rutine",
+    "CL_CF_HP_Add_Home_Status": "Dodajte status doma",
+    "CL_CF_HP_Add_Home_Status_tip": "Ovdje možete dodati najčešće korištene kartice uređaja",
+    "CL_CF_HP_Add_Things_To_Do": "Dodajte aktivnosti",
+    "CL_CF_HP_Add_Things_To_Do_tip": "Ovdje možete dodati najčešće korištene widgete",
+    "CL_CF_HP_Add_Discover": "Dodajte Discover",
+    "CL_CF_HP_Add_Discover_tip": "Ovdje možete dodati najčešće korištene savjete",
+    "CL_CF_HP_no_device_tip": "Povežite svoje uređaje",
+    "CL_CF_AS_check_devices": "Provjerite status svog uređaja.",
+    "CL_CF_AS_scan": "SKENIRATI",
+    "CL_CF_HP_device_skip_tips": "Možete se vratiti na početnu stranicu stare verzije tako da pronađete postavku početne kartice na prilagodbi izgleda na stranici izbornika",
+    "CL_CF_HP_reset_card_tips": "Jeste li sigurni da se želite vratiti na početne zadane postavke?",
+    "CL_SL_CM_laundry_services_title": "Personalizirajte svoje rublje",
+    "CL_SL_CM_usage_month": "Mjesečno korištenje",
+    "CL_SL_CM_how_to_wash_detail": "Pomoći vam kako oprati različite vrste odjeće poput svile, vune, kože, jakni i perjanica itd.",
+    "CL_SL_CM_how_to_care_detail": "Pomoći će vam kako njegovati različite vrste odjeće poput svile, vune, kože, jakni i perjanica itd.",
+    "CL_SL_CM_drum_cleaning_about_detail": "Funkcija čišćenja bubnja perilice rublja je ciklus samočišćenja dizajniran za uklanjanje plijesni ili drugih bakterija koje su se vjerojatno nakupile unutar bubnja tijekom opće uporabe.",
+    "CL_SL_CM_drum_clean_wash_cycles": "ciklusi pranja",
+    "CL_SL_CM_drum_clean_recommended_cycles": "preporučeno čišćenje bubnja nakon 45 pranja, možete ga postaviti na stranici uređaja",
+    "CL_SL_CM_progam_send_warning2": "Nažalost, program ne može poslati, uključite uređaj.",
+    "CL_SL_CM_energy_monitor": "IDITE NA ENERGETSKI MONITOR",
+    "CL_CF_CS_tuya_dehumidifier_select_name_1": "Imenujte kao D**CW, poput D12CW, D16CW",
+    "CL_CF_CS_tuya_dehumidifier_select_name_2": "",
+    "CL_CF_CS_searching_device_near_you": ""
 }
